--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -82,7 +82,7 @@ conforme Tabela \ref{stratsALCKappaFriedAllReduxHalf}.
 Assim, as estratégias propostas podem ser consideradas superiores à não aplicação
 de aprendizado ativo (Rnd) e a algumas estratégias relevantes apesar de ATUman e ATUmah
 somente terem superado suas versões originais nos orçamentos abaixo de $50$ exemplos \ano{quantidade máxima antes que
-o tamanho das bases permita ALCs de tamnhos diferentes}
+o tamanho das bases permita ALCs de tamanhos diferentes}
 - conforme Tabela \ref{stratsALCKappaFriedAllRedux50}.
 Em aplicações reais, entretanto, a estabilidade do algoritmo pode ser mais importante
 do que o desempenho preditivo médio, pois uma grande variabilidade pode colocar o
