--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -107,6 +107,25 @@ Multiarmed bandit problem
 http://www.ualberta.ca/~szepesva/Thesis/varun08.thesis.pdf
 
 \section{Recomendação de estratégias}
+c45    5nn   maj
+3buds
+0.252 0.227 0.283 qtd de grupos = 94 qtd de metaexemplos: 1974 Winner nenhum*
+0.30   0.33  0.283 qtd de grupos = 94 qtd de metaexemplos: 1974 Winner lea
+0.276 0.316 0.283 qtd de grupos = 94 qtd de metaexemplos: 1974 Winner 3atts*
+0.300 0.347 0.283 qtd de grupos = 94 qtd de metaexemplos: 1974 Winner ambos
+2buds
+0.246 0.228 0.285 qtd de grupos = 94 qtd de metaexemplos: 1316 Winner nenhum*
+0.314 0.327 0.285 qtd de grupos = 94 qtd de metaexemplos: 1316 Winner lea
+0.286 0.305 0.285 qtd de grupos = 94 qtd de metaexemplos: 1316 Winner 3atts*
+0.307 0.339 0.285 qtd de grupos = 94 qtd de metaexemplos: 1316 Winner ambos
+1bud
+0.252 0.223 0.305 qtd de grupos = 94 qtd de metaexemplos: 658 Winner nenhum*
+0.280 0.321 0.305 qtd de grupos = 94 qtd de metaexemplos: 658 Winner lea
+0.324 0.307 0.305 qtd de grupos = 94 qtd de metaexemplos: 658 Winner 3atts*
+0.328 0.328 0.305 qtd de grupos = 94 qtd de metaexemplos: 658 Winner ambos
+*-> errado, pois gera exemplos repetidos com classes diferentes
+
+
 \esb{devido à escassez de metaexemplos, LOO foi adotado em conjunto com treinamento
 em grupos de exemplos}
 
