--- a/stratsALCKappaCIELMRedux.tex
+++ b/stratsALCKappaCIELMRedux.tex
@@ -3,13 +3,13 @@
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.06 &   0.29/  0.10 &   0.32/  0.05 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.27}}/  0.08 &   0.33/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.35}}}/  0.06 &   0.32/  0.05 \\
-2-arcene &   0.17/  0.21 &   0.15/  0.20 &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.16/\textcolor{black}{\textbf{  0.17}} & \textcolor{black}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.17}} &   0.19/  0.22 & \underline{\textcolor{blue}{\textbf{  0.21}}}/\textcolor{darkgreen}{\textbf{  0.16}} &   0.15/\textcolor{black}{\textbf{  0.17}} & \textcolor{black}{\textbf{  0.20}}/  0.18 & \textcolor{black}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.17}} &   0.15/  0.22 \\
-3-artificial charact... &   0.14/\textcolor{black}{\textbf{  0.02}} &   0.13/  0.03 & \textcolor{black}{\textbf{  0.16}}/  0.03 &   0.14/  0.03 &   0.14/  0.03 &   0.14/  0.03 &   0.05/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.16}}/  0.03 & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} \\
+2-arcene &   0.17/  0.21 & \textcolor{red}{\textbf{  0.15}}/  0.20 &   0.19/  0.17 &   0.16/  0.17 &   0.20/  0.17 &   0.19/  0.22 &   0.21/\textcolor{black}{\textbf{  0.16}} & \textcolor{red}{\textbf{  0.15}}/  0.17 &   0.20/  0.18 &   0.20/  0.17 & \textcolor{red}{\textbf{  0.15}}/  0.22 \\
+3-artificial charact... &   0.14/\textcolor{black}{\textbf{  0.02}} &   0.13/  0.03 & \textcolor{black}{\textbf{  0.16}}/  0.03 &   0.14/  0.03 &   0.14/  0.03 &   0.14/  0.03 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.16}}/  0.03 & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.04}}/  0.08 & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} &   0.05/  0.07 &   0.05/  0.10 & \textcolor{red}{\textbf{  0.04}}/  0.08 & \textcolor{blue}{\textbf{  0.07}}/\textcolor{darkgreen}{\textbf{  0.05}} &   0.06/  0.07 &   0.06/  0.07 &   0.06/  0.08 &   0.06/  0.09 \\
 5-autoUniv au7 300 d... & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.06}}/  0.04 & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.06}}/  0.04 \\
 6-autoUniv au7 700 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.04}} &   0.04/  0.06 & \textcolor{black}{\textbf{  0.05}}/  0.07 & \textcolor{black}{\textbf{  0.05}}/  0.06 & \textcolor{red}{\textbf{  0.03}}/  0.05 &   0.04/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.06}}}/  0.06 & \textcolor{red}{\textbf{  0.03}}/  0.06 & \textcolor{black}{\textbf{  0.05}}/  0.06 &   0.04/  0.07 &   0.04/  0.06 \\
-7-balance scale &   0.60/  0.08 &   0.60/  0.10 & \textcolor{black}{\textbf{  0.67}}/  0.08 &   0.64/  0.11 &   0.65/  0.08 &   0.59/  0.09 &   0.65/  0.09 & \textcolor{black}{\textbf{  0.67}}/  0.08 &   0.60/  0.09 & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.10 &   0.62/  0.10 \\ \hline
-8-banana &   0.05/  0.07 &   0.03/  0.08 & \underline{\textcolor{blue}{\textbf{  0.14}}}/  0.08 &   0.06/\textcolor{black}{\textbf{  0.06}} &   0.10/  0.09 &   0.03/  0.09 &   0.10/  0.07 & \textcolor{black}{\textbf{  0.13}}/  0.09 &   0.05/  0.07 &   0.09/  0.08 &   0.01/  0.09 \\
+7-balance scale &   0.60/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.10 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.08}} &   0.64/  0.11 &   0.65/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.59}}/  0.09 &   0.65/  0.09 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.09 & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.10 &   0.62/  0.10 \\ \hline
+8-banana &   0.05/\textcolor{black}{\textbf{  0.07}} &   0.03/  0.08 & \underline{\textcolor{blue}{\textbf{  0.14}}}/  0.08 &   0.06/\textcolor{darkgreen}{\textbf{  0.06}} &   0.10/  0.09 &   0.03/  0.09 &   0.10/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.13}}/  0.09 &   0.05/\textcolor{black}{\textbf{  0.07}} &   0.09/  0.08 & \textcolor{red}{\textbf{  0.01}}/  0.09 \\
 9-banknote authentic... & \textcolor{red}{\textbf{  0.67}}/  0.31 &   0.70/\textcolor{black}{\textbf{  0.27}} & \underline{\textcolor{blue}{\textbf{  0.84}}}/  0.31 &   0.68/\textcolor{black}{\textbf{  0.27}} &   0.78/  0.31 & \textcolor{red}{\textbf{  0.67}}/  0.32 &   0.77/  0.29 &   0.81/  0.33 &   0.70/\textcolor{black}{\textbf{  0.27}} & \textcolor{black}{\textbf{  0.82}}/  0.33 &   0.71/  0.29 \\
 10-bupa &   0.13/\textcolor{black}{\textbf{  0.12}} &   0.12/\textcolor{black}{\textbf{  0.12}} & \textcolor{black}{\textbf{  0.16}}/  0.14 & \textcolor{red}{\textbf{  0.11}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.13/  0.15 &   0.14/  0.13 & \textcolor{black}{\textbf{  0.16}}/  0.13 &   0.15/  0.13 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.12}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.13 & \textcolor{red}{\textbf{  0.11}}/  0.13 \\
 11-car evaluation & \textcolor{red}{\textbf{  0.26}}/  0.07 &   0.27/\textcolor{black}{\textbf{  0.06}} &   0.29/  0.07 &   0.28/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.26}}/  0.07 & \textcolor{red}{\textbf{  0.26}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.07 &   0.27/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.31}}/  0.07 & \textcolor{red}{\textbf{  0.26}}/  0.07 \\
@@ -20,7 +20,7 @@
 16-connect. vowel red... &   0.26/  0.05 &   0.27/  0.05 &   0.32/  0.06 &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.30/  0.05 &   0.27/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.04}} &   0.31/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.34}}/  0.05 &   0.30/  0.05 \\
 17-connect. vowel... &   0.22/  0.04 &   0.22/\textcolor{black}{\textbf{  0.03}} &   0.25/  0.04 &   0.24/\textcolor{black}{\textbf{  0.03}} &   0.25/  0.04 &   0.21/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.10}}/\textcolor{darkgreen}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.03}} &   0.23/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.03}} &   0.24/  0.04 \\
 18-dbworld subjects & \textcolor{black}{\textbf{  0.09}}/  0.23 & \textcolor{red}{\textbf{ -0.01}}/  0.24 &   0.01/  0.26 &   0.07/  0.25 &   0.07/  0.25 & \underline{\textcolor{blue}{\textbf{  0.10}}}/  0.26 &   0.02/  0.26 &   0.06/  0.28 &   0.01/  0.24 &   0.01/  0.26 &   0.07/\textcolor{black}{\textbf{  0.22}} \\
-19-first order theore... &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.10/\textcolor{black}{\textbf{  0.03}} &   0.09/  0.04 &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.10/\textcolor{black}{\textbf{  0.03}} &   0.08/  0.05 &   0.08/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} \\
+19-first order theore... &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.10/\textcolor{black}{\textbf{  0.03}} &   0.09/  0.04 &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.10/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.08}}/  0.05 & \textcolor{red}{\textbf{  0.08}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.03}} \\
 20-flare &   0.43/  0.06 & \textcolor{black}{\textbf{  0.45}}/  0.06 &   0.44/\textcolor{black}{\textbf{  0.04}} &   0.42/  0.07 &   0.44/  0.05 &   0.43/  0.05 & \textcolor{red}{\textbf{  0.41}}/  0.07 &   0.44/\textcolor{black}{\textbf{  0.04}} &   0.44/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.46}}}/\textcolor{black}{\textbf{  0.04}} &   0.44/  0.06 \\
 21-glass &   0.31/  0.08 &   0.32/  0.08 & \textcolor{black}{\textbf{  0.35}}/  0.08 & \textcolor{red}{\textbf{  0.29}}/  0.08 &   0.33/  0.09 &   0.30/  0.08 &   0.32/  0.08 &   0.34/  0.10 &   0.32/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.37}}}/  0.08 &   0.32/  0.09 \\ \hline
 22-habermans survival &   0.15/  0.12 & \textcolor{red}{\textbf{  0.13}}/  0.13 &   0.16/  0.12 & \textcolor{blue}{\textbf{  0.18}}/  0.12 & \textcolor{blue}{\textbf{  0.18}}/  0.15 &   0.16/  0.13 &   0.16/  0.13 &   0.17/  0.12 &   0.15/  0.14 &   0.16/\textcolor{black}{\textbf{  0.11}} &   0.17/  0.12 \\
@@ -33,26 +33,26 @@
 29-ionosphere &   0.46/  0.16 &   0.44/  0.16 &   0.48/  0.18 &   0.43/  0.21 &   0.46/  0.17 &   0.45/  0.21 & \textcolor{red}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.15}} & \textcolor{black}{\textbf{  0.52}}/  0.20 &   0.49/  0.19 & \textcolor{black}{\textbf{  0.52}}/  0.19 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.15}} \\
 30-iris &   0.61/  0.13 &   0.65/  0.12 & \underline{\textcolor{blue}{\textbf{  0.76}}}/  0.12 &   0.64/  0.12 &   0.69/\textcolor{black}{\textbf{  0.10}} &   0.64/  0.13 &   0.66/  0.11 &   0.68/  0.13 & \textcolor{red}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.71}}/  0.12 &   0.61/  0.11 \\
 31-kr vs kp &   0.32/\textcolor{black}{\textbf{  0.09}} &   0.29/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.12 & \textcolor{red}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.09}} &   0.31/\textcolor{black}{\textbf{  0.09}} &   0.30/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.13 &   0.34/  0.12 &   0.31/  0.10 & \underline{\textcolor{blue}{\textbf{  0.37}}}/  0.11 &   0.32/\textcolor{black}{\textbf{  0.09}} \\
-32-leaf &   0.36/  0.04 &   0.36/  0.05 & \textcolor{blue}{\textbf{  0.42}}/  0.05 &   0.31/  0.05 &   0.39/  0.04 &   0.36/  0.05 &   0.32/  0.05 & \textcolor{blue}{\textbf{  0.42}}/  0.05 &   0.40/  0.05 &   0.41/  0.05 &   0.41/  0.05 \\\end{tabular}}\label{stratsALCKappa0aCIELMRedux}
+32-leaf &   0.36/\textcolor{black}{\textbf{  0.04}} &   0.36/  0.05 & \textcolor{blue}{\textbf{  0.42}}/  0.05 & \textcolor{red}{\textbf{  0.31}}/  0.05 &   0.39/\textcolor{black}{\textbf{  0.04}} &   0.36/  0.05 &   0.32/  0.05 & \textcolor{blue}{\textbf{  0.42}}/  0.05 &   0.40/  0.05 &   0.41/  0.05 &   0.41/  0.05 \\\end{tabular}}\label{stratsALCKappa0aCIELMRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.36}}/  0.32 &   0.44/  0.24 &   0.43/  0.24 &   0.39/  0.25 &   0.41/  0.24 &   0.42/  0.26 &   0.43/  0.26 &   0.44/  0.24 & \textcolor{blue}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.22}} & \textcolor{blue}{\textbf{  0.45}}/  0.28 &   0.38/  0.26 \\
-34-mammographic mass &   0.49/  0.09 &   0.49/  0.11 &   0.48/  0.11 &   0.47/  0.15 &   0.50/  0.10 &   0.48/  0.08 &   0.45/  0.13 & \textcolor{blue}{\textbf{  0.51}}/  0.11 &   0.50/  0.08 & \textcolor{blue}{\textbf{  0.51}}/  0.11 &   0.50/  0.09 \\
+34-mammographic mass &   0.49/  0.09 &   0.49/  0.11 &   0.48/  0.11 &   0.47/  0.15 &   0.50/  0.10 &   0.48/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.45}}/  0.13 &   0.51/  0.11 &   0.50/\textcolor{black}{\textbf{  0.08}} &   0.51/  0.11 &   0.50/  0.09 \\
 35-mfeat fourier &   0.37/  0.04 &   0.37/\textcolor{black}{\textbf{  0.03}} &   0.41/  0.04 &   0.39/\textcolor{black}{\textbf{  0.03}} &   0.40/  0.04 &   0.38/  0.04 & \textcolor{red}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} &   0.42/  0.04 &   0.42/\textcolor{black}{\textbf{  0.03}} \\
 36-molecular promotor... &   0.11/\textcolor{black}{\textbf{  0.23}} & \textcolor{black}{\textbf{  0.14}}/  0.25 & \textcolor{red}{\textbf{  0.05}}/  0.27 &   0.11/  0.26 & \textcolor{black}{\textbf{  0.14}}/  0.27 &   0.12/\textcolor{black}{\textbf{  0.23}} & \textcolor{black}{\textbf{  0.14}}/  0.24 &   0.10/  0.24 &   0.06/  0.26 & \textcolor{red}{\textbf{  0.05}}/  0.27 &   0.12/\textcolor{black}{\textbf{  0.23}} \\
-37-molecular splice j... &   0.14/  0.06 &   0.13/  0.04 &   0.14/  0.05 &   0.13/  0.04 &   0.15/  0.04 &   0.14/  0.05 & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.04 &   0.14/  0.05 &   0.15/  0.05 &   0.13/  0.06 &   0.12/  0.05 \\
-38-monks1 &   0.21/  0.11 &   0.22/  0.11 &   0.22/  0.12 &   0.22/\textcolor{darkgreen}{\textbf{  0.09}} &   0.20/  0.12 &   0.19/  0.11 &   0.14/  0.11 & \textcolor{black}{\textbf{  0.24}}/  0.11 &   0.21/  0.11 & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.11 &   0.21/\textcolor{black}{\textbf{  0.10}} \\
+37-molecular splice j... &   0.14/  0.06 &   0.13/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 &   0.13/\textcolor{black}{\textbf{  0.04}} &   0.15/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 &   0.15/  0.05 &   0.13/  0.06 & \textcolor{red}{\textbf{  0.12}}/  0.05 \\
+38-monks1 &   0.21/  0.11 &   0.22/  0.11 &   0.22/  0.12 &   0.22/\textcolor{darkgreen}{\textbf{  0.09}} &   0.20/  0.12 &   0.19/  0.11 & \textcolor{red}{\textbf{  0.14}}/  0.11 & \textcolor{black}{\textbf{  0.24}}/  0.11 &   0.21/  0.11 & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.11 &   0.21/\textcolor{black}{\textbf{  0.10}} \\
 39-monks2 &   0.00/  0.09 &   0.01/  0.10 &  -0.01/  0.11 &   0.00/  0.12 & \textcolor{black}{\textbf{  0.02}}/\textcolor{black}{\textbf{  0.08}} &   0.00/  0.09 & \underline{\textcolor{blue}{\textbf{  0.03}}}/  0.10 & \textcolor{red}{\textbf{ -0.02}}/  0.11 &  -0.01/\textcolor{black}{\textbf{  0.08}} &   0.00/\textcolor{black}{\textbf{  0.08}} &   0.01/  0.09 \\ \hline
 40-monks3 &   0.43/  0.12 & \textcolor{red}{\textbf{  0.40}}/  0.13 &   0.48/  0.16 &   0.45/  0.14 &   0.47/  0.13 &   0.42/  0.12 &   0.49/  0.13 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.11}} &   0.47/  0.13 & \textcolor{black}{\textbf{  0.50}}/  0.13 &   0.47/  0.12 \\
 41-movement libras &   0.40/  0.06 &   0.43/  0.06 & \textcolor{black}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.05}} &   0.43/  0.07 &   0.44/  0.06 &   0.41/  0.06 & \textcolor{red}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.46}}/  0.06 &   0.45/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.48}}}/  0.06 &   0.44/  0.06 \\
 42-movement libras 10 &   0.46/  0.07 &   0.48/  0.06 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.05}} &   0.49/\textcolor{black}{\textbf{  0.05}} &   0.50/  0.06 &   0.46/  0.06 & \textcolor{red}{\textbf{  0.40}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.51}}/  0.06 &   0.49/  0.06 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.06 &   0.50/\textcolor{black}{\textbf{  0.05}} \\
-43-mushroom &   0.58/  0.10 &   0.54/  0.15 &   0.62/  0.14 &   0.51/  0.20 &   0.60/  0.12 &   0.55/  0.11 &   0.49/  0.10 & \textcolor{blue}{\textbf{  0.65}}/  0.12 &   0.61/  0.15 & \textcolor{blue}{\textbf{  0.65}}/  0.14 &   0.59/  0.15 \\
-44-ozone eighthr &   0.02/  0.08 &   0.01/  0.07 &   0.02/  0.07 & \textcolor{blue}{\textbf{  0.05}}/  0.07 & \textcolor{blue}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.05}} &   0.02/  0.08 &  -0.06/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.05}}/  0.08 &   0.04/  0.07 &   0.04/  0.06 & \textcolor{blue}{\textbf{  0.05}}/  0.07 \\
-45-ozone onehr &   0.01/  0.04 &   0.01/  0.03 &  -0.01/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.02}}/  0.03 &   0.01/  0.03 &   0.01/  0.04 &  -0.03/\textcolor{darkgreen}{\textbf{  0.01}} &   0.01/  0.03 & \textcolor{blue}{\textbf{  0.02}}/  0.03 &   0.00/  0.03 &   0.01/  0.04 \\
-46-page blocks &   0.34/  0.08 &   0.40/  0.10 & \underline{\textcolor{blue}{\textbf{  0.58}}}/  0.06 & \textcolor{black}{\textbf{  0.54}}/  0.06 &   0.52/  0.07 &   0.29/  0.12 &   0.30/  0.11 &   0.52/  0.07 &   0.39/  0.07 &   0.50/  0.07 &   0.39/  0.08 \\ \hline
+43-mushroom &   0.58/\textcolor{black}{\textbf{  0.10}} &   0.54/  0.15 &   0.62/  0.14 &   0.51/  0.20 &   0.60/  0.12 &   0.55/  0.11 &   0.49/\textcolor{black}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  0.65}}/  0.12 &   0.61/  0.15 & \textcolor{blue}{\textbf{  0.65}}/  0.14 &   0.59/  0.15 \\
+44-ozone eighthr &   0.02/  0.08 &   0.01/  0.07 &   0.02/  0.07 & \textcolor{blue}{\textbf{  0.05}}/  0.07 & \textcolor{blue}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.05}} &   0.02/  0.08 & \textcolor{red}{\textbf{ -0.06}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.05}}/  0.08 &   0.04/  0.07 &   0.04/  0.06 & \textcolor{blue}{\textbf{  0.05}}/  0.07 \\
+45-ozone onehr &   0.01/  0.04 &   0.01/  0.03 &  -0.01/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.02}}/  0.03 &   0.01/  0.03 &   0.01/  0.04 & \textcolor{red}{\textbf{ -0.03}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.01/  0.03 & \textcolor{black}{\textbf{  0.02}}/  0.03 &   0.00/  0.03 &   0.01/  0.04 \\
+46-page blocks &   0.34/  0.08 &   0.40/  0.10 & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.06}} &   0.52/  0.07 & \textcolor{red}{\textbf{  0.29}}/  0.12 &   0.30/  0.11 &   0.52/  0.07 &   0.39/  0.07 &   0.50/  0.07 &   0.39/  0.08 \\ \hline
 47-parkinsons & \textcolor{black}{\textbf{  0.38}}/  0.22 &   0.35/  0.20 & \textcolor{black}{\textbf{  0.38}}/  0.18 &   0.36/  0.18 &   0.34/  0.22 &   0.35/  0.20 & \textcolor{red}{\textbf{  0.29}}/  0.21 & \textcolor{black}{\textbf{  0.38}}/  0.19 &   0.36/\textcolor{black}{\textbf{  0.17}} &   0.37/\textcolor{darkgreen}{\textbf{  0.16}} &   0.35/\textcolor{black}{\textbf{  0.17}} \\
 48-phoneme &   0.28/  0.10 &   0.32/  0.10 &   0.31/  0.15 &   0.31/  0.10 &   0.34/  0.11 & \textcolor{red}{\textbf{  0.27}}/  0.12 &   0.33/\textcolor{darkgreen}{\textbf{  0.08}} &   0.35/\textcolor{black}{\textbf{  0.09}} &   0.33/\textcolor{black}{\textbf{  0.09}} &   0.34/  0.11 &   0.35/  0.10 \\
 49-pima indians diabe... &   0.29/  0.17 &   0.29/\textcolor{black}{\textbf{  0.12}} & \underline{\textcolor{blue}{\textbf{  0.33}}}/  0.13 & \textcolor{red}{\textbf{  0.27}}/  0.16 &   0.31/  0.14 & \textcolor{red}{\textbf{  0.27}}/  0.18 &   0.30/\textcolor{black}{\textbf{  0.12}} &   0.30/  0.16 &   0.31/  0.16 &   0.29/  0.16 &   0.28/  0.17 \\
@@ -62,11 +62,11 @@
 53-robot failure lp1 &   0.20/  0.10 &   0.21/\textcolor{black}{\textbf{  0.07}} &   0.22/  0.10 &   0.16/  0.12 &   0.20/  0.12 &   0.20/  0.11 & \textcolor{red}{\textbf{  0.13}}/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.23}}/  0.10 & \underline{\textcolor{blue}{\textbf{  0.24}}}/  0.08 &   0.21/  0.10 & \textcolor{black}{\textbf{  0.23}}/  0.11 \\ \hline
 54-robot failure lp4 &   0.13/  0.15 & \textcolor{red}{\textbf{  0.10}}/  0.12 &   0.16/  0.14 &   0.17/  0.12 & \textcolor{black}{\textbf{  0.19}}/  0.15 &   0.15/\textcolor{black}{\textbf{  0.11}} & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.12 &   0.12/  0.13 &   0.14/\textcolor{black}{\textbf{  0.11}} &   0.12/  0.12 &   0.13/  0.14 \\
 55-robot failure lp5 &   0.15/  0.10 &   0.15/  0.08 &   0.17/  0.10 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.08 &   0.17/  0.10 &   0.15/  0.08 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.06}} &   0.17/\textcolor{black}{\textbf{  0.06}} &   0.16/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.19}}/  0.07 &   0.16/  0.07 \\
-56-robot nav sensor r... &   0.43/  0.07 &   0.49/  0.09 &   0.61/  0.11 &   0.53/  0.09 & \textcolor{black}{\textbf{  0.62}}/  0.06 &   0.31/  0.16 &   0.15/  0.09 & \underline{\textcolor{blue}{\textbf{  0.64}}}/  0.05 &   0.43/  0.06 &   0.54/  0.07 &   0.45/  0.06 \\
+56-robot nav sensor r... &   0.43/  0.07 &   0.49/  0.09 &   0.61/  0.11 &   0.53/  0.09 & \textcolor{black}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.06}} &   0.31/  0.16 & \textcolor{red}{\textbf{  0.15}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.64}}}/\textcolor{darkgreen}{\textbf{  0.05}} &   0.43/\textcolor{black}{\textbf{  0.06}} &   0.54/  0.07 &   0.45/\textcolor{black}{\textbf{  0.06}} \\
 57-saheart &   0.26/  0.10 & \textcolor{blue}{\textbf{  0.28}}/  0.09 &   0.24/  0.11 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.08}} &   0.25/  0.09 &   0.25/  0.10 & \textcolor{red}{\textbf{  0.23}}/  0.13 &   0.26/  0.10 &   0.26/  0.10 &   0.27/\textcolor{darkgreen}{\textbf{  0.06}} &   0.27/  0.09 \\
 58-seeds & \textcolor{red}{\textbf{  0.80}}/  0.07 & \textcolor{red}{\textbf{  0.80}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.85}}}/  0.06 &   0.82/  0.06 &   0.83/  0.07 & \textcolor{red}{\textbf{  0.80}}/  0.06 &   0.83/  0.08 &   0.82/  0.07 &   0.81/  0.06 & \textcolor{black}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.80}}/  0.06 \\
 59-semeion &   0.33/  0.04 &   0.33/\textcolor{black}{\textbf{  0.03}} &   0.33/  0.04 &   0.34/\textcolor{black}{\textbf{  0.03}} &   0.33/\textcolor{black}{\textbf{  0.03}} &   0.33/\textcolor{black}{\textbf{  0.03}} &   0.28/  0.04 & \textcolor{blue}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} &   0.34/\textcolor{black}{\textbf{  0.03}} &   0.33/  0.04 \\
-60-spambase &   0.39/  0.15 &   0.37/  0.14 &   0.40/  0.15 &   0.36/  0.15 &   0.39/  0.13 &   0.39/  0.14 &   0.37/  0.16 &   0.41/  0.14 & \textcolor{blue}{\textbf{  0.42}}/  0.13 & \textcolor{blue}{\textbf{  0.42}}/  0.16 &   0.41/  0.14 \\ \hline
+60-spambase &   0.39/  0.15 &   0.37/  0.14 &   0.40/  0.15 & \textcolor{red}{\textbf{  0.36}}/  0.15 &   0.39/\textcolor{black}{\textbf{  0.13}} &   0.39/  0.14 &   0.37/  0.16 &   0.41/  0.14 &   0.42/\textcolor{black}{\textbf{  0.13}} &   0.42/  0.16 &   0.41/  0.14 \\ \hline
 61-spect heart & \textcolor{blue}{\textbf{  0.23}}/\textcolor{darkgreen}{\textbf{  0.13}} &   0.17/  0.17 & \textcolor{blue}{\textbf{  0.23}}/  0.18 & \textcolor{red}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.14}} & \textcolor{blue}{\textbf{  0.23}}/  0.18 & \textcolor{blue}{\textbf{  0.23}}/  0.15 &   0.21/  0.16 & \textcolor{blue}{\textbf{  0.23}}/  0.15 &   0.17/  0.17 &   0.17/  0.19 &   0.19/  0.15 \\
 62-spectf heart &   0.14/  0.14 &   0.12/  0.16 &   0.13/  0.15 &   0.17/  0.13 &   0.18/\textcolor{black}{\textbf{  0.11}} &   0.12/  0.15 & \textcolor{red}{\textbf{  0.02}}/  0.17 &   0.15/  0.16 & \textcolor{blue}{\textbf{  0.19}}/  0.12 &   0.13/  0.13 & \textcolor{blue}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.11}} \\
 63-statlog australian... & \textcolor{red}{\textbf{  0.50}}/  0.11 &   0.51/  0.11 &   0.52/  0.13 & \textcolor{red}{\textbf{  0.50}}/  0.10 &   0.56/  0.11 &   0.51/  0.13 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.57}}/  0.09 &   0.54/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.57}}/  0.09 &   0.54/  0.09 \\
@@ -78,9 +78,9 @@
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.48/  0.18 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} &   0.50/  0.16 & \textcolor{black}{\textbf{  0.51}}/  0.17 &   0.48/  0.17 &   0.50/  0.16 & \textcolor{black}{\textbf{  0.51}}/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.16 &   0.50/  0.17 \\
 66-statlog image segm... &   0.64/  0.04 &   0.67/  0.04 & \textcolor{black}{\textbf{  0.73}}/  0.05 &   0.62/  0.04 &   0.68/  0.05 &   0.61/  0.05 & \textcolor{red}{\textbf{  0.44}}/  0.05 &   0.72/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.75}}}/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} \\
-67-statlog landsat sa... &   0.64/  0.05 &   0.66/  0.03 & \underline{\textcolor{blue}{\textbf{  0.73}}}/  0.02 &   0.62/  0.06 &   0.69/  0.03 &   0.62/  0.06 &   0.39/  0.07 &   0.68/  0.02 &   0.65/  0.03 & \textcolor{black}{\textbf{  0.71}}/  0.05 &   0.65/  0.03 \\
+67-statlog landsat sa... &   0.64/  0.05 &   0.66/  0.03 & \underline{\textcolor{blue}{\textbf{  0.73}}}/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.06 &   0.69/  0.03 &   0.62/  0.06 & \textcolor{red}{\textbf{  0.39}}/  0.07 &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.65/  0.03 & \textcolor{black}{\textbf{  0.71}}/  0.05 &   0.65/  0.03 \\
 68-statlog vehicle si... & \textcolor{red}{\textbf{  0.35}}/  0.06 &   0.36/\textcolor{black}{\textbf{  0.05}} &   0.39/  0.07 & \textcolor{red}{\textbf{  0.35}}/  0.07 &   0.38/  0.08 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} &   0.41/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.05}} &   0.40/  0.06 \\
-69-steel plates fault... &   0.47/\textcolor{black}{\textbf{  0.10}} &   0.47/  0.15 &   0.56/  0.16 &   0.42/  0.19 &   0.51/  0.13 &   0.46/\textcolor{black}{\textbf{  0.10}} &   0.47/  0.15 & \underline{\textcolor{blue}{\textbf{  0.64}}}/  0.11 &   0.54/  0.12 & \textcolor{black}{\textbf{  0.63}}/  0.16 &   0.51/  0.12 \\
+69-steel plates fault... &   0.47/\textcolor{black}{\textbf{  0.10}} &   0.47/  0.15 &   0.56/  0.16 & \textcolor{red}{\textbf{  0.42}}/  0.19 &   0.51/  0.13 &   0.46/\textcolor{black}{\textbf{  0.10}} &   0.47/  0.15 & \underline{\textcolor{blue}{\textbf{  0.64}}}/  0.11 &   0.54/  0.12 & \textcolor{black}{\textbf{  0.63}}/  0.16 &   0.51/  0.12 \\
 70-systhetic control &   0.60/  0.07 &   0.62/  0.07 & \textcolor{black}{\textbf{  0.67}}/  0.05 &   0.62/  0.05 &   0.64/  0.05 &   0.59/  0.06 & \textcolor{red}{\textbf{  0.37}}/  0.07 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.04}} &   0.64/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.05 &   0.62/  0.05 \\
 71-teaching assistant... &   0.11/\textcolor{black}{\textbf{  0.10}} & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.15 &   0.13/  0.16 &   0.12/  0.14 & \textcolor{red}{\textbf{  0.09}}/  0.16 &   0.11/  0.13 &   0.11/  0.15 &   0.14/  0.14 &   0.12/  0.12 & \textcolor{black}{\textbf{  0.16}}/  0.13 &   0.12/\textcolor{black}{\textbf{  0.10}} \\ \hline
 72-thyroid ann &   0.12/  0.06 &   0.13/\textcolor{black}{\textbf{  0.05}} &   0.16/  0.06 &   0.14/  0.06 &   0.14/  0.06 &   0.11/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{darkgreen}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.19}}}/\textcolor{black}{\textbf{  0.05}} &   0.15/  0.06 & \textcolor{black}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.05}} &   0.14/  0.06 \\
@@ -89,14 +89,14 @@
 75-thyroid sick &   0.19/\textcolor{black}{\textbf{  0.05}} &   0.19/  0.06 &   0.19/\textcolor{black}{\textbf{  0.05}} &   0.18/  0.07 &   0.20/  0.06 &   0.19/  0.06 & \textcolor{red}{\textbf{  0.08}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.24}}/  0.07 &   0.23/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.05}} &   0.22/\textcolor{black}{\textbf{  0.05}} \\
 76-thyroid sick euthy... &   0.07/  0.10 &   0.13/  0.10 &   0.15/  0.13 &   0.13/\textcolor{darkgreen}{\textbf{  0.08}} &   0.15/  0.11 & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.09}} &   0.09/  0.10 & \underline{\textcolor{blue}{\textbf{  0.22}}}/  0.13 &   0.14/  0.10 & \textcolor{black}{\textbf{  0.21}}/  0.14 &   0.15/  0.10 \\
 77-tic tac toe &   0.14/  0.09 & \textcolor{red}{\textbf{  0.12}}/  0.08 &   0.14/  0.08 &   0.14/  0.08 &   0.13/  0.10 &   0.13/  0.08 & \textcolor{red}{\textbf{  0.12}}/  0.09 &   0.15/  0.11 &   0.13/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.16}}/  0.08 &   0.13/  0.08 \\
-78-turkiye student &   0.09/  0.02 &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.01 &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 \\ \hline
-79-twonorm &   0.74/\textcolor{black}{\textbf{  0.19}} &   0.72/\textcolor{black}{\textbf{  0.19}} &   0.76/  0.20 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.19}} &   0.74/  0.20 &   0.74/\textcolor{black}{\textbf{  0.19}} &   0.72/  0.20 &   0.76/  0.21 &   0.73/  0.20 & \textcolor{blue}{\textbf{  0.77}}/  0.20 &   0.72/\textcolor{black}{\textbf{  0.19}} \\
+78-turkiye student & \textcolor{red}{\textbf{  0.09}}/  0.02 &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 &   0.10/  0.02 & \textcolor{blue}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 & \textcolor{blue}{\textbf{  0.11}}/  0.02 \\ \hline
+79-twonorm &   0.74/\textcolor{black}{\textbf{  0.19}} & \textcolor{red}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.19}} &   0.76/  0.20 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.19}} &   0.74/  0.20 &   0.74/\textcolor{black}{\textbf{  0.19}} & \textcolor{red}{\textbf{  0.72}}/  0.20 &   0.76/  0.21 &   0.73/  0.20 & \textcolor{blue}{\textbf{  0.77}}/  0.20 & \textcolor{red}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.19}} \\
 80-user knowledge &   0.41/\textcolor{black}{\textbf{  0.06}} &   0.40/  0.07 &   0.48/  0.09 &   0.40/\textcolor{black}{\textbf{  0.06}} &   0.43/  0.08 &   0.41/  0.07 & \textcolor{red}{\textbf{  0.33}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.06}} &   0.43/  0.08 & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.06}} &   0.42/  0.08 \\
-81-vertebra column 2c &   0.42/  0.13 &   0.41/  0.14 &   0.45/  0.14 &   0.44/  0.13 &   0.44/  0.11 &   0.46/  0.14 &   0.43/  0.17 & \textcolor{blue}{\textbf{  0.50}}/  0.12 &   0.48/  0.10 & \textcolor{blue}{\textbf{  0.50}}/  0.11 &   0.45/  0.11 \\
+81-vertebra column 2c &   0.42/  0.13 & \textcolor{red}{\textbf{  0.41}}/  0.14 &   0.45/  0.14 &   0.44/  0.13 &   0.44/  0.11 &   0.46/  0.14 &   0.43/  0.17 & \textcolor{black}{\textbf{  0.50}}/  0.12 &   0.48/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.50}}/  0.11 &   0.45/  0.11 \\
 82-vertebra column 3c &   0.58/  0.06 & \textcolor{red}{\textbf{  0.57}}/  0.06 &   0.60/  0.07 &   0.59/  0.08 &   0.60/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.57}}/  0.08 &   0.60/  0.07 & \textcolor{blue}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.05}} &   0.60/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.62}}/  0.06 &   0.58/  0.07 \\
-83-volcanoes a3 &   0.21/  0.09 &   0.25/  0.11 & \textcolor{black}{\textbf{  0.28}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.09 &   0.27/  0.09 &   0.20/  0.11 &   0.13/  0.07 &   0.25/  0.09 &   0.27/  0.10 &   0.25/  0.09 &   0.27/  0.09 \\
+83-volcanoes a3 &   0.21/  0.09 &   0.25/  0.11 & \textcolor{black}{\textbf{  0.28}}/\textcolor{darkgreen}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.09 &   0.27/  0.09 &   0.20/  0.11 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.07}} &   0.25/  0.09 &   0.27/  0.10 &   0.25/  0.09 &   0.27/  0.09 \\
 84-volcanoes b2 &   0.17/  0.09 &   0.18/  0.09 & \textcolor{black}{\textbf{  0.29}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.30}}}/\textcolor{black}{\textbf{  0.05}} &   0.27/  0.08 &   0.17/  0.09 & \textcolor{red}{\textbf{  0.03}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.25/  0.08 &   0.18/  0.07 &   0.21/  0.08 &   0.20/  0.08 \\
-85-volcanoes d1 &   0.05/  0.05 &   0.07/  0.06 &   0.02/\textcolor{black}{\textbf{  0.02}} &   0.03/  0.04 &   0.03/  0.04 &   0.06/  0.05 &   0.02/\textcolor{darkgreen}{\textbf{  0.01}} &   0.03/\textcolor{black}{\textbf{  0.02}} &   0.07/  0.06 &   0.05/  0.04 & \underline{\textcolor{blue}{\textbf{  0.09}}}/  0.05 \\ \hline
+85-volcanoes d1 &   0.05/  0.05 &   0.07/  0.06 & \textcolor{red}{\textbf{  0.02}}/\textcolor{black}{\textbf{  0.02}} &   0.03/  0.04 &   0.03/  0.04 &   0.06/  0.05 & \textcolor{red}{\textbf{  0.02}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.03/\textcolor{black}{\textbf{  0.02}} &   0.07/  0.06 &   0.05/  0.04 & \textcolor{blue}{\textbf{  0.09}}/  0.05 \\ \hline
 86-volcanoes e2 &   0.07/  0.07 &   0.08/  0.08 &   0.04/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.05}} &   0.06/\textcolor{black}{\textbf{  0.05}} &   0.06/  0.08 &   0.05/  0.06 &   0.08/  0.08 &   0.10/  0.09 &   0.07/  0.06 & \textcolor{blue}{\textbf{  0.11}}/  0.07 \\
 87-voting & \textcolor{red}{\textbf{  0.59}}/  0.14 & \textcolor{red}{\textbf{  0.59}}/  0.14 & \textcolor{black}{\textbf{  0.65}}/  0.13 &   0.62/\textcolor{black}{\textbf{  0.12}} &   0.62/  0.14 &   0.60/  0.15 &   0.64/  0.13 &   0.63/  0.13 &   0.61/\textcolor{black}{\textbf{  0.12}} & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.13 &   0.61/  0.13 \\
 88-waveform v2 &   0.40/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.39}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.42}}/\textcolor{black}{\textbf{  0.05}} &   0.40/  0.06 & \textcolor{black}{\textbf{  0.42}}/\textcolor{black}{\textbf{  0.05}} &   0.41/  0.06 & \underline{\textcolor{blue}{\textbf{  0.47}}}/\textcolor{black}{\textbf{  0.05}} &   0.41/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.42}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.42}}/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} \\
@@ -105,6 +105,6 @@
 91-wilt & \textcolor{red}{\textbf{ -0.02}}/  0.04 &   0.00/  0.05 &  -0.01/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} &  -0.01/  0.04 & \textcolor{red}{\textbf{ -0.02}}/  0.04 & \textcolor{blue}{\textbf{  0.03}}/  0.08 & \textcolor{blue}{\textbf{  0.03}}/  0.09 &  -0.01/  0.04 &   0.00/\textcolor{black}{\textbf{  0.03}} &  -0.01/  0.04 \\
 92-wine & \textcolor{red}{\textbf{  0.79}}/  0.10 &   0.80/  0.10 & \textcolor{blue}{\textbf{  0.84}}/  0.09 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.82/  0.10 &   0.80/\textcolor{black}{\textbf{  0.08}} &   0.82/  0.09 &   0.83/  0.09 &   0.81/\textcolor{black}{\textbf{  0.08}} &   0.83/\textcolor{black}{\textbf{  0.08}} &   0.82/\textcolor{black}{\textbf{  0.08}} \\ \hline
 93-wine quality white... &   0.12/  0.04 &   0.12/\textcolor{black}{\textbf{  0.03}} &   0.12/  0.04 &   0.13/\textcolor{black}{\textbf{  0.03}} &   0.12/  0.04 &   0.12/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.09}}/  0.04 & \textcolor{blue}{\textbf{  0.14}}/  0.04 &   0.13/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.14}}/  0.04 & \textcolor{blue}{\textbf{  0.14}}/\textcolor{black}{\textbf{  0.03}} \\
-94-yeast 4class &   0.31/  0.05 &   0.33/  0.06 &   0.34/  0.05 &   0.32/  0.05 &   0.33/  0.07 &   0.31/  0.06 &   0.19/  0.08 & \textcolor{blue}{\textbf{  0.36}}/  0.05 &   0.33/  0.05 & \textcolor{blue}{\textbf{  0.36}}/  0.05 &   0.33/  0.05 \\\end{tabular}}\label{stratsALCKappa2aCIELMRedux}
+94-yeast 4class &   0.31/\textcolor{black}{\textbf{  0.05}} &   0.33/  0.06 &   0.34/\textcolor{black}{\textbf{  0.05}} &   0.32/\textcolor{black}{\textbf{  0.05}} &   0.33/  0.07 &   0.31/  0.06 & \textcolor{red}{\textbf{  0.19}}/  0.08 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.05}} &   0.33/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.05}} &   0.33/\textcolor{black}{\textbf{  0.05}} \\\end{tabular}}\label{stratsALCKappa2aCIELMRedux}
 \end{center}
 \end{table}
