--- a/stratsALCKappaFriedNBRedux.tex
+++ b/stratsALCKappaFriedNBRedux.tex
@@ -7,16 +7,16 @@
 3 - Mar  	&   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
 4 - EERent	&   &   &   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   &   &   &   &   &   \\
-6 - \textbf{SGmulti}	& * & + & + & * & * & - & * &   &   & * & + &   & * &   & * \\ \hline
+6 - \textbf{SGmulti}	& * & + & * & * & * & - & * &   &   & * & + &   &   &   &   \\ \hline
 7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\
-8 - TUman	&   &   &   &   &   &   &   & - &   & * &   &   &   &   & . \\ \hline
-9 - \textbf{ATUman}	& * & * & * & * & * &   & * &   & - & * & * &   & * &   & * \\
+8 - TUman	&   &   &   &   &   &   &   & - &   & * &   &   &   &   &   \\ \hline
+9 - \textbf{ATUman}	& * & * & * & * & * &   & * & + & - & * & * &   &   &   &   \\
 10 - TUmah	&   &   &   &   &   &   &   &   &   & - &   &   &   &   &   \\ \hline
-11 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   &   & - &   &   &   &   \\
-12 - GATU0man	& + &   &   & * & . &   & + &   &   & * &   & - & + &   & * \\ \hline
-13 - GATU0mah	&   &   &   &   &   &   &   &   &   &   &   &   & - &   &   \\
-14 - GATUman	& * &   &   & * & + &   & * &   &   & * &   &   & * & - & * \\ \hline
-15 - GATUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}}
+11 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   & . & - &   &   &   &   \\
+12 - \textbf{GATU0man}	& * & * & * & * & * &   & * & * &   & * & * & - & + &   & + \\ \hline
+13 - \textbf{GATU0mah}	&   &   &   & + &   &   &   &   &   & * &   &   & - &   &   \\
+14 - \textbf{GATUman}	& * & * & * & * & * &   & * & * &   & * & * &   & * & - & * \\ \hline
+15 - \textbf{GATUmah}	&   &   &   & + &   &   & . &   &   & * &   &   &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFriedNBRedux}
 \end{center}
 \end{table}
