--- a/stratsALCKappaFried5NNRedux.tex
+++ b/stratsALCKappaFried5NNRedux.tex
@@ -3,20 +3,20 @@
 \begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   & + &   &   &   &   &   &   &   &   &   &   \\ \hline
+2 - Clu  	&   & - &   &   & * &   &   &   &   &   &   &   &   &   &   \\ \hline
 3 - Mar  	&   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
-4 - EERent	& * & + & * & - & * & * & * &   &   &   &   &   & . &   & * \\ \hline
+4 - EERent	& * & + & * & - & * & * & * &   &   &   &   &   &   &   &   \\ \hline
 5 - EERacu	&   &   &   &   & - &   &   &   &   &   &   &   &   &   &   \\
 6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   \\ \hline
 7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\
-8 - TUman	& * & + & * &   & * & * & * & - &   &   &   &   & . &   & + \\ \hline
-9 - \textbf{ATUman}	& * & * & * &   & * & * & * &   & - &   &   & + & * & * & * \\
-10 - TUmah	& . &   & + &   & * & . & * &   &   & - &   &   &   &   &   \\ \hline
-11 - \textbf{ATUmah}	& * & . & * &   & * & * & * &   &   &   & - &   &   &   & + \\
-12 - GATU0man	&   &   &   &   & * &   & + &   &   &   &   & - &   &   &   \\ \hline
-13 - GATU0mah	&   &   &   &   & * &   &   &   &   &   &   &   & - &   &   \\
-14 - GATUman	&   &   &   &   & * &   &   &   &   &   &   &   &   & - &   \\ \hline
-15 - GATUmah	&   &   &   &   & . &   &   &   &   &   &   &   &   &   & - \\\end{tabular}}
+8 - TUman	& * & + & * &   & * & * & * & - &   &   &   &   &   &   &   \\ \hline
+9 - \textbf{ATUman}	& * & * & * &   & * & * & * &   & - &   &   &   &   &   &   \\
+10 - TUmah	& + &   & + &   & * & + & * &   &   & - &   &   &   &   &   \\ \hline
+11 - \textbf{ATUmah}	& * & + & * &   & * & * & * &   &   &   & - &   &   &   &   \\
+12 - \textbf{GATU0man}	& * & . & * &   & * & * & * &   &   &   &   & - &   &   &   \\ \hline
+13 - \textbf{GATU0mah}	& * &   & * &   & * & * & * &   &   &   &   &   & - &   &   \\
+14 - \textbf{GATUman}	& * & + & * &   & * & * & * &   &   &   &   &   &   & - &   \\ \hline
+15 - \textbf{GATUmah}	& * & + & * &   & * & * & * &   &   &   &   &   &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFried5NNRedux}
 \end{center}
 \end{table}
