--- a/stratsALCKappaIELMRedux.tex
+++ b/stratsALCKappaIELMRedux.tex
@@ -3,13 +3,13 @@
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.31/  0.10 & \textcolor{blue}{\textbf{  0.33}}/  0.07 &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.08 & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.33}}/  0.07 &   0.32/  0.07 \\
-2-arcene & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.20/  0.16 &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.17 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.16/  0.15 &   0.18/  0.15 &   0.20/  0.16 &   0.18/  0.19 &   0.12/  0.16 \\
-3-artificial charact... &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.17/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.16/  0.03 &   0.15/  0.03 &   0.07/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} \\
+2-arcene & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.20/  0.16 &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.17 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.16/  0.15 &   0.18/  0.15 &   0.20/  0.16 &   0.18/  0.19 & \textcolor{red}{\textbf{  0.12}}/  0.16 \\
+3-artificial charact... &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.17/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.16/  0.03 &   0.15/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.04/\textcolor{black}{\textbf{  0.06}} &   0.07/  0.08 &   0.06/  0.08 &   0.04/  0.07 &   0.05/  0.09 & \textcolor{red}{\textbf{  0.03}}/  0.08 & \textcolor{black}{\textbf{  0.08}}/  0.08 &   0.07/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.09}}}/  0.07 & \textcolor{black}{\textbf{  0.08}}/  0.07 &   0.06/  0.08 \\
 5-autoUniv au7 300 d... &   0.06/  0.04 &   0.06/\textcolor{black}{\textbf{  0.03}} &   0.06/  0.04 & \textcolor{blue}{\textbf{  0.07}}/  0.04 &   0.06/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.05}}/  0.04 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.03}} &   0.06/  0.04 &   0.06/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.07}}/  0.04 \\
 6-autoUniv au7 700 & \textcolor{red}{\textbf{  0.04}}/  0.06 &   0.06/  0.05 & \textcolor{red}{\textbf{  0.04}}/  0.06 &   0.05/  0.06 & \textcolor{red}{\textbf{  0.04}}/  0.07 &   0.06/  0.06 & \underline{\textcolor{blue}{\textbf{  0.09}}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.07}}/  0.07 &   0.06/  0.06 &   0.06/  0.07 &   0.05/\textcolor{black}{\textbf{  0.04}} \\
-7-balance scale &   0.62/  0.11 &   0.59/  0.11 &   0.67/  0.09 &   0.65/  0.11 &   0.66/  0.10 &   0.61/  0.10 & \textcolor{black}{\textbf{  0.68}}/  0.08 & \textcolor{black}{\textbf{  0.68}}/  0.09 &   0.62/  0.12 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.09 &   0.63/  0.11 \\ \hline
-8-banana &   0.07/  0.11 &   0.03/  0.10 & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.08 &   0.09/  0.11 &   0.12/  0.09 &   0.05/  0.10 & \textcolor{black}{\textbf{  0.15}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.15}}/  0.09 &   0.04/  0.10 &   0.12/  0.08 &   0.03/  0.10 \\
+7-balance scale &   0.62/  0.11 & \textcolor{red}{\textbf{  0.59}}/  0.11 &   0.67/\textcolor{black}{\textbf{  0.09}} &   0.65/  0.11 &   0.66/  0.10 &   0.61/  0.10 & \textcolor{black}{\textbf{  0.68}}/\textcolor{darkgreen}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.09}} &   0.62/  0.12 & \underline{\textcolor{blue}{\textbf{  0.69}}}/\textcolor{black}{\textbf{  0.09}} &   0.63/  0.11 \\ \hline
+8-banana &   0.07/  0.11 & \textcolor{red}{\textbf{  0.03}}/  0.10 & \underline{\textcolor{blue}{\textbf{  0.17}}}/\textcolor{black}{\textbf{  0.08}} &   0.09/  0.11 &   0.12/  0.09 &   0.05/  0.10 & \textcolor{black}{\textbf{  0.15}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.15}}/  0.09 &   0.04/  0.10 &   0.12/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.03}}/  0.10 \\
 9-banknote authentic... &   0.74/  0.29 &   0.77/  0.24 & \textcolor{blue}{\textbf{  0.90}}/  0.15 &   0.76/  0.21 &   0.80/  0.27 & \textcolor{red}{\textbf{  0.73}}/  0.28 &   0.83/\textcolor{darkgreen}{\textbf{  0.11}} & \textcolor{blue}{\textbf{  0.90}}/  0.17 &   0.76/  0.28 & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.14}} &   0.77/  0.29 \\
 10-bupa &   0.11/  0.15 &   0.13/  0.17 &   0.18/  0.15 &   0.11/  0.14 &   0.10/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.09}}/  0.16 & \underline{\textcolor{blue}{\textbf{  0.23}}}/\textcolor{black}{\textbf{  0.13}} &   0.15/\textcolor{black}{\textbf{  0.13}} &   0.12/\textcolor{black}{\textbf{  0.13}} &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.15/  0.16 \\
 11-car evaluation &   0.27/  0.08 & \textcolor{red}{\textbf{  0.26}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.32}}}/\textcolor{black}{\textbf{  0.07}} &   0.28/\textcolor{black}{\textbf{  0.07}} &   0.29/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.07}} &   0.29/\textcolor{black}{\textbf{  0.07}} &   0.30/  0.08 &   0.27/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.31}}/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.26}}/  0.08 \\
@@ -20,7 +20,7 @@
 16-connect. vowel red... &   0.28/\textcolor{black}{\textbf{  0.05}} &   0.28/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.34}}/  0.06 &   0.28/  0.06 &   0.32/\textcolor{black}{\textbf{  0.05}} &   0.28/  0.06 & \textcolor{red}{\textbf{  0.18}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.05}} &   0.30/\textcolor{black}{\textbf{  0.05}} &   0.33/  0.06 &   0.30/  0.06 \\
 17-connect. vowel... &   0.23/  0.04 &   0.23/  0.04 & \textcolor{black}{\textbf{  0.26}}/  0.04 &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.24/  0.04 &   0.23/  0.04 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.27}}}/  0.05 &   0.25/  0.04 &   0.25/  0.04 &   0.24/  0.04 \\
 18-dbworld subjects &   0.03/  0.23 &  -0.02/\textcolor{black}{\textbf{  0.22}} &   0.04/  0.25 &  -0.01/  0.27 &   0.06/\textcolor{black}{\textbf{  0.22}} &   0.03/  0.26 &   0.01/  0.23 &   0.01/  0.23 & \textcolor{black}{\textbf{  0.10}}/  0.23 &   0.04/  0.26 &  -0.01/  0.26 \\
-19-first order theore... &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.11/  0.04 &   0.08/  0.04 &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.08/\textcolor{black}{\textbf{  0.03}} &   0.07/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.03}} &   0.11/\textcolor{black}{\textbf{  0.03}} &   0.11/\textcolor{black}{\textbf{  0.03}} \\
+19-first order theore... &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.11/  0.04 &   0.08/  0.04 &   0.09/\textcolor{black}{\textbf{  0.03}} &   0.08/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.03}} &   0.11/\textcolor{black}{\textbf{  0.03}} &   0.11/\textcolor{black}{\textbf{  0.03}} \\
 20-flare &   0.42/  0.06 &   0.41/  0.06 &   0.41/  0.06 &   0.40/\textcolor{black}{\textbf{  0.05}} &   0.42/  0.06 &   0.40/  0.07 & \textcolor{red}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.43}}/  0.06 &   0.42/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.05}} \\
 21-glass &   0.33/  0.08 &   0.35/  0.08 &   0.37/  0.08 & \textcolor{red}{\textbf{  0.30}}/  0.10 &   0.35/  0.11 &   0.32/  0.08 &   0.35/  0.09 & \underline{\textcolor{blue}{\textbf{  0.39}}}/  0.09 &   0.33/  0.09 & \textcolor{black}{\textbf{  0.38}}/  0.11 &   0.32/\textcolor{black}{\textbf{  0.07}} \\ \hline
 22-habermans survival &   0.17/  0.12 &   0.16/\textcolor{black}{\textbf{  0.11}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.12}}/  0.12 &   0.16/  0.12 &   0.19/  0.13 & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.11}} &   0.13/  0.13 &   0.15/  0.13 &   0.18/  0.13 &   0.17/  0.14 \\
@@ -33,26 +33,26 @@
 29-ionosphere &   0.48/\textcolor{black}{\textbf{  0.14}} &   0.45/  0.16 &   0.49/  0.15 &   0.42/\textcolor{black}{\textbf{  0.14}} &   0.47/\textcolor{black}{\textbf{  0.14}} &   0.46/  0.15 & \textcolor{red}{\textbf{  0.35}}/  0.16 &   0.48/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/\textcolor{black}{\textbf{  0.14}} &   0.52/  0.16 \\
 30-iris & \textcolor{red}{\textbf{  0.67}}/  0.13 &   0.70/  0.11 & \underline{\textcolor{blue}{\textbf{  0.80}}}/  0.13 &   0.69/  0.13 &   0.75/  0.11 &   0.71/  0.14 &   0.70/  0.15 & \textcolor{black}{\textbf{  0.77}}/  0.11 &   0.71/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.77}}/  0.13 &   0.70/\textcolor{darkgreen}{\textbf{  0.09}} \\
 31-kr vs kp &   0.29/  0.10 &   0.29/\textcolor{black}{\textbf{  0.09}} &   0.34/  0.10 & \textcolor{red}{\textbf{  0.23}}/  0.15 &   0.31/  0.12 &   0.30/  0.10 &   0.31/  0.11 & \textcolor{black}{\textbf{  0.35}}/  0.14 & \textcolor{black}{\textbf{  0.35}}/  0.11 & \textcolor{black}{\textbf{  0.35}}/  0.11 &   0.29/  0.11 \\
-32-leaf &   0.40/  0.06 &   0.40/  0.05 & \textcolor{blue}{\textbf{  0.45}}/  0.06 &   0.34/  0.04 &   0.42/  0.04 &   0.40/  0.05 &   0.36/  0.04 & \textcolor{blue}{\textbf{  0.45}}/  0.05 &   0.43/  0.06 &   0.44/  0.05 &   0.44/  0.05 \\\end{tabular}}\label{stratsALCKappa0aIELMRedux}
+32-leaf &   0.40/  0.06 &   0.40/  0.05 & \textcolor{blue}{\textbf{  0.45}}/  0.06 & \textcolor{red}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.04}} &   0.42/\textcolor{black}{\textbf{  0.04}} &   0.40/  0.05 &   0.36/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.45}}/  0.05 &   0.43/  0.06 &   0.44/  0.05 &   0.44/  0.05 \\\end{tabular}}\label{stratsALCKappa0aIELMRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 33-leukemia haslinger &   0.42/  0.21 &   0.45/\textcolor{black}{\textbf{  0.18}} &   0.42/  0.22 &   0.43/  0.20 &   0.44/  0.20 &   0.45/  0.19 & \underline{\textcolor{blue}{\textbf{  0.47}}}/  0.23 &   0.42/  0.21 & \textcolor{red}{\textbf{  0.41}}/  0.23 & \textcolor{red}{\textbf{  0.41}}/  0.20 &   0.42/  0.22 \\
-34-mammographic mass &   0.48/  0.13 &   0.48/  0.12 & \textcolor{blue}{\textbf{  0.55}}/  0.07 &   0.50/  0.13 &   0.52/  0.09 &   0.48/  0.13 &   0.54/  0.09 &   0.54/  0.09 &   0.52/  0.09 & \textcolor{blue}{\textbf{  0.55}}/  0.08 &   0.50/  0.10 \\
+34-mammographic mass & \textcolor{red}{\textbf{  0.48}}/  0.13 & \textcolor{red}{\textbf{  0.48}}/  0.12 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.50/  0.13 &   0.52/  0.09 & \textcolor{red}{\textbf{  0.48}}/  0.13 &   0.54/  0.09 &   0.54/  0.09 &   0.52/  0.09 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.08}} &   0.50/  0.10 \\
 35-mfeat fourier &   0.38/  0.04 &   0.37/  0.03 &   0.39/  0.04 &   0.39/  0.04 &   0.39/  0.04 &   0.39/  0.03 & \textcolor{red}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.43}}/  0.03 & \textcolor{blue}{\textbf{  0.43}}/  0.04 &   0.42/\textcolor{black}{\textbf{  0.02}} &   0.42/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.14/  0.20 &   0.10/\textcolor{black}{\textbf{  0.16}} & \textcolor{blue}{\textbf{  0.18}}/  0.21 &   0.12/  0.17 &   0.15/  0.20 &   0.15/  0.18 &   0.14/  0.23 & \textcolor{red}{\textbf{  0.08}}/  0.21 &   0.12/  0.18 & \textcolor{blue}{\textbf{  0.18}}/  0.21 &   0.11/  0.17 \\
-37-molecular splice j... &   0.12/  0.05 &   0.14/  0.05 &   0.14/  0.06 &   0.15/  0.05 &   0.13/  0.05 &   0.13/  0.05 & \textcolor{blue}{\textbf{  0.16}}/  0.04 &   0.14/  0.06 & \textcolor{blue}{\textbf{  0.16}}/  0.05 &   0.11/  0.04 &   0.14/  0.05 \\
-38-monks1 &   0.20/  0.14 &   0.20/  0.15 &   0.25/  0.14 &   0.24/\textcolor{black}{\textbf{  0.11}} &   0.22/\textcolor{darkgreen}{\textbf{  0.10}} &   0.22/  0.14 &   0.17/  0.13 & \underline{\textcolor{blue}{\textbf{  0.27}}}/  0.12 &   0.24/  0.14 & \textcolor{black}{\textbf{  0.26}}/  0.16 &   0.23/  0.12 \\
+37-molecular splice j... &   0.12/  0.05 &   0.14/  0.05 &   0.14/  0.06 &   0.15/  0.05 &   0.13/  0.05 &   0.13/  0.05 & \textcolor{blue}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.06 & \textcolor{blue}{\textbf{  0.16}}/  0.05 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.04}} &   0.14/  0.05 \\
+38-monks1 &   0.20/  0.14 &   0.20/  0.15 &   0.25/  0.14 &   0.24/  0.11 &   0.22/\textcolor{black}{\textbf{  0.10}} &   0.22/  0.14 & \textcolor{red}{\textbf{  0.17}}/  0.13 & \textcolor{black}{\textbf{  0.27}}/  0.12 &   0.24/  0.14 &   0.26/  0.16 &   0.23/  0.12 \\
 39-monks2 &   0.00/\textcolor{darkgreen}{\textbf{  0.06}} &  -0.03/  0.11 &   0.00/  0.10 & \textcolor{red}{\textbf{ -0.04}}/  0.10 &  -0.01/  0.11 &  -0.01/\textcolor{black}{\textbf{  0.08}} &   0.00/  0.09 & \textcolor{red}{\textbf{ -0.04}}/  0.09 & \textcolor{blue}{\textbf{  0.01}}/  0.10 & \textcolor{blue}{\textbf{  0.01}}/  0.11 &  -0.01/  0.09 \\ \hline
 40-monks3 & \textcolor{red}{\textbf{  0.38}}/  0.15 &   0.40/  0.15 &   0.50/\textcolor{black}{\textbf{  0.12}} &   0.47/  0.15 &   0.44/  0.17 &   0.43/  0.15 & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.12}} & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.12}} &   0.41/  0.16 &   0.51/\textcolor{darkgreen}{\textbf{  0.11}} &   0.43/  0.15 \\
 41-movement libras &   0.42/  0.06 &   0.43/  0.06 & \textcolor{blue}{\textbf{  0.48}}/  0.08 &   0.44/  0.06 &   0.45/\textcolor{black}{\textbf{  0.05}} &   0.42/  0.06 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.48}}/  0.06 &   0.46/\textcolor{black}{\textbf{  0.05}} &   0.47/  0.06 &   0.45/\textcolor{black}{\textbf{  0.05}} \\
 42-movement libras 10 &   0.48/  0.06 &   0.49/\textcolor{black}{\textbf{  0.05}} &   0.52/  0.07 &   0.51/  0.06 &   0.50/  0.06 &   0.47/  0.06 & \textcolor{red}{\textbf{  0.41}}/  0.06 & \textcolor{blue}{\textbf{  0.53}}/  0.06 &   0.51/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.53}}/  0.06 &   0.51/  0.06 \\
-43-mushroom &   0.57/  0.12 &   0.56/  0.11 &   0.62/  0.12 &   0.50/  0.13 &   0.60/  0.12 &   0.58/  0.12 &   0.40/  0.15 & \textcolor{black}{\textbf{  0.65}}/  0.12 &   0.62/  0.13 & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.11 &   0.61/  0.12 \\
-44-ozone eighthr &   0.02/\textcolor{black}{\textbf{  0.06}} &   0.04/\textcolor{black}{\textbf{  0.06}} &   0.02/\textcolor{black}{\textbf{  0.06}} &   0.06/\textcolor{black}{\textbf{  0.06}} &   0.05/\textcolor{black}{\textbf{  0.06}} &   0.03/\textcolor{black}{\textbf{  0.06}} &  -0.03/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.08}}}/  0.07 &   0.06/  0.07 & \textcolor{black}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} \\
-45-ozone onehr & \textcolor{black}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.03}} &  -0.01/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.03}} &  -0.03/\textcolor{darkgreen}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.02}}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.01}}/  0.04 \\
-46-page blocks &   0.39/  0.08 &   0.44/  0.07 & \underline{\textcolor{blue}{\textbf{  0.61}}}/  0.05 & \textcolor{black}{\textbf{  0.55}}/  0.06 &   0.53/  0.07 &   0.37/  0.07 &   0.36/  0.10 &   0.52/  0.09 &   0.42/  0.07 &   0.53/  0.06 &   0.43/  0.07 \\ \hline
+43-mushroom &   0.57/  0.12 &   0.56/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.12 &   0.50/  0.13 &   0.60/  0.12 &   0.58/  0.12 &   0.40/  0.15 & \textcolor{black}{\textbf{  0.65}}/  0.12 &   0.62/  0.13 & \underline{\textcolor{blue}{\textbf{  0.66}}}/\textcolor{black}{\textbf{  0.11}} &   0.61/  0.12 \\
+44-ozone eighthr &   0.02/\textcolor{black}{\textbf{  0.06}} &   0.04/\textcolor{black}{\textbf{  0.06}} &   0.02/\textcolor{black}{\textbf{  0.06}} &   0.06/\textcolor{black}{\textbf{  0.06}} &   0.05/\textcolor{black}{\textbf{  0.06}} &   0.03/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{ -0.03}}/\textcolor{darkgreen}{\textbf{  0.04}} &   0.07/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.08}}/  0.07 &   0.06/  0.07 &   0.07/\textcolor{black}{\textbf{  0.06}} \\
+45-ozone onehr &   0.01/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} &   0.01/\textcolor{black}{\textbf{  0.03}} &  -0.01/\textcolor{black}{\textbf{  0.03}} &   0.01/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{ -0.03}}/\textcolor{darkgreen}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.02}}/\textcolor{black}{\textbf{  0.03}} &   0.01/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} &   0.01/  0.04 \\
+46-page blocks &   0.39/  0.08 &   0.44/  0.07 & \underline{\textcolor{blue}{\textbf{  0.61}}}/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.06}} &   0.53/  0.07 &   0.37/  0.07 & \textcolor{red}{\textbf{  0.36}}/  0.10 &   0.52/  0.09 &   0.42/  0.07 &   0.53/\textcolor{black}{\textbf{  0.06}} &   0.43/  0.07 \\ \hline
 47-parkinsons & \textcolor{red}{\textbf{  0.33}}/  0.22 &   0.38/  0.17 &   0.42/  0.17 &   0.38/  0.16 &   0.37/  0.19 &   0.36/  0.19 &   0.34/  0.20 & \textcolor{blue}{\textbf{  0.45}}/  0.15 &   0.38/  0.16 &   0.43/  0.16 &   0.41/\textcolor{black}{\textbf{  0.14}} \\
 48-phoneme &   0.28/  0.14 &   0.29/  0.13 &   0.32/  0.13 &   0.29/  0.13 &   0.32/  0.15 & \textcolor{red}{\textbf{  0.26}}/  0.13 & \textcolor{black}{\textbf{  0.33}}/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.11}} &   0.29/  0.14 & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.11}} &   0.29/  0.12 \\
 49-pima indians diabe... & \textcolor{red}{\textbf{  0.24}}/  0.21 & \textcolor{red}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.18}} & \underline{\textcolor{blue}{\textbf{  0.33}}}/\textcolor{black}{\textbf{  0.18}} &   0.25/\textcolor{black}{\textbf{  0.18}} &   0.26/\textcolor{black}{\textbf{  0.18}} &   0.26/  0.22 &   0.29/\textcolor{darkgreen}{\textbf{  0.16}} & \textcolor{black}{\textbf{  0.30}}/  0.19 &   0.26/  0.20 & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.18}} &   0.28/\textcolor{black}{\textbf{  0.18}} \\
@@ -62,11 +62,11 @@
 53-robot failure lp1 &   0.20/\textcolor{black}{\textbf{  0.09}} &   0.23/  0.10 &   0.25/  0.10 &   0.23/  0.12 &   0.25/  0.10 &   0.21/  0.11 & \textcolor{red}{\textbf{  0.17}}/\textcolor{black}{\textbf{  0.09}} & \underline{\textcolor{blue}{\textbf{  0.27}}}/  0.10 &   0.24/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.09}} &   0.21/  0.10 \\ \hline
 54-robot failure lp4 &   0.15/  0.15 &   0.15/\textcolor{black}{\textbf{  0.12}} & \textcolor{blue}{\textbf{  0.24}}/  0.14 &   0.16/  0.13 &   0.13/  0.14 & \textcolor{red}{\textbf{  0.11}}/  0.13 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{darkgreen}{\textbf{  0.08}} &   0.15/  0.13 &   0.13/  0.19 &   0.14/  0.16 &   0.13/  0.16 \\
 55-robot failure lp5 &   0.18/  0.08 &   0.18/\textcolor{black}{\textbf{  0.06}} &   0.20/  0.10 &   0.20/  0.07 &   0.20/  0.07 & \textcolor{red}{\textbf{  0.16}}/  0.09 &   0.17/  0.08 & \underline{\textcolor{blue}{\textbf{  0.22}}}/\textcolor{black}{\textbf{  0.06}} &   0.20/  0.07 &   0.20/  0.08 &   0.20/  0.08 \\
-56-robot nav sensor r... &   0.48/  0.09 &   0.54/  0.06 & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.05 &   0.55/  0.07 &   0.64/  0.08 &   0.38/  0.21 &   0.48/  0.17 & \textcolor{black}{\textbf{  0.70}}/  0.06 &   0.46/  0.06 &   0.58/  0.06 &   0.46/  0.05 \\
+56-robot nav sensor r... &   0.48/  0.09 &   0.54/  0.06 & \underline{\textcolor{blue}{\textbf{  0.71}}}/\textcolor{black}{\textbf{  0.05}} &   0.55/  0.07 &   0.64/  0.08 & \textcolor{red}{\textbf{  0.38}}/  0.21 &   0.48/  0.17 & \textcolor{black}{\textbf{  0.70}}/  0.06 &   0.46/  0.06 &   0.58/  0.06 &   0.46/\textcolor{black}{\textbf{  0.05}} \\
 57-saheart &   0.22/  0.12 &   0.24/  0.13 & \textcolor{black}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.09}} &   0.25/  0.11 &   0.24/  0.12 & \textcolor{red}{\textbf{  0.20}}/  0.13 &   0.22/\textcolor{black}{\textbf{  0.09}} &   0.25/\textcolor{black}{\textbf{  0.09}} &   0.26/  0.13 & \textcolor{black}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.09}} &   0.23/  0.13 \\
 58-seeds & \textcolor{red}{\textbf{  0.83}}/  0.05 &   0.84/  0.06 & \textcolor{blue}{\textbf{  0.87}}/  0.05 & \textcolor{red}{\textbf{  0.83}}/  0.05 &   0.86/  0.05 &   0.84/  0.05 &   0.86/  0.06 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} \\
-59-semeion &   0.32/  0.04 &   0.32/  0.04 &   0.34/\textcolor{black}{\textbf{  0.03}} &   0.34/  0.05 &   0.33/  0.04 &   0.33/\textcolor{black}{\textbf{  0.03}} &   0.27/  0.04 & \textcolor{black}{\textbf{  0.36}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.37}}}/  0.04 &   0.35/  0.04 &   0.35/  0.04 \\
-60-spambase &   0.43/  0.10 &   0.43/  0.09 & \textcolor{blue}{\textbf{  0.48}}/  0.09 &   0.41/  0.09 &   0.43/  0.11 &   0.44/  0.09 &   0.44/  0.10 & \textcolor{blue}{\textbf{  0.48}}/  0.09 &   0.46/  0.09 &   0.47/  0.08 &   0.46/  0.07 \\ \hline
+59-semeion &   0.32/  0.04 &   0.32/  0.04 &   0.34/\textcolor{black}{\textbf{  0.03}} &   0.34/  0.05 &   0.33/  0.04 &   0.33/\textcolor{black}{\textbf{  0.03}} &   0.27/  0.04 &   0.36/  0.04 & \textcolor{blue}{\textbf{  0.37}}/  0.04 &   0.35/  0.04 &   0.35/  0.04 \\
+60-spambase &   0.43/  0.10 &   0.43/  0.09 & \textcolor{blue}{\textbf{  0.48}}/  0.09 & \textcolor{red}{\textbf{  0.41}}/  0.09 &   0.43/  0.11 &   0.44/  0.09 &   0.44/  0.10 & \textcolor{blue}{\textbf{  0.48}}/  0.09 &   0.46/  0.09 &   0.47/  0.08 &   0.46/\textcolor{black}{\textbf{  0.07}} \\ \hline
 61-spect heart &   0.20/\textcolor{black}{\textbf{  0.13}} &   0.17/  0.14 &   0.17/  0.14 & \textcolor{blue}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.13}} &   0.16/  0.17 &   0.19/  0.16 & \textcolor{red}{\textbf{  0.14}}/  0.16 &   0.18/  0.15 &   0.18/  0.19 &   0.19/  0.16 &   0.18/  0.15 \\
 62-spectf heart &   0.13/  0.12 &   0.14/  0.16 &   0.15/  0.16 &   0.19/\textcolor{black}{\textbf{  0.10}} &   0.16/  0.13 &   0.15/  0.13 & \textcolor{red}{\textbf{  0.08}}/  0.18 &   0.14/  0.12 & \textcolor{blue}{\textbf{  0.20}}/  0.13 &   0.16/  0.14 &   0.18/\textcolor{black}{\textbf{  0.10}} \\
 63-statlog australian... & \textcolor{red}{\textbf{  0.48}}/  0.13 & \textcolor{red}{\textbf{  0.48}}/  0.15 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.08}} &   0.50/  0.14 &   0.52/  0.10 & \textcolor{red}{\textbf{  0.48}}/  0.11 &   0.53/  0.11 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.08}} &   0.52/  0.09 &   0.56/  0.12 &   0.51/  0.12 \\
@@ -78,9 +78,9 @@
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.46/  0.15 &   0.45/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/  0.17 &   0.49/  0.16 & \textcolor{red}{\textbf{  0.43}}/  0.16 &   0.51/  0.16 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.16 &   0.50/\textcolor{darkgreen}{\textbf{  0.12}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.14}} &   0.49/  0.17 \\
 66-statlog image segm... &   0.66/  0.05 &   0.68/  0.04 & \textcolor{black}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.05 &   0.71/  0.04 &   0.66/  0.04 & \textcolor{red}{\textbf{  0.50}}/  0.06 &   0.74/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.76}}}/\textcolor{black}{\textbf{  0.03}} &   0.70/\textcolor{black}{\textbf{  0.03}} \\
-67-statlog landsat sa... &   0.66/  0.04 &   0.69/  0.03 & \textcolor{black}{\textbf{  0.72}}/  0.05 &   0.66/  0.06 &   0.71/  0.04 &   0.67/  0.05 &   0.47/  0.06 &   0.70/  0.04 &   0.68/  0.03 & \underline{\textcolor{blue}{\textbf{  0.73}}}/  0.04 &   0.67/  0.03 \\
+67-statlog landsat sa... &   0.66/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.72}}/  0.05 &   0.66/  0.06 &   0.71/  0.04 &   0.67/  0.05 & \textcolor{red}{\textbf{  0.47}}/  0.06 &   0.70/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.73}}}/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} \\
 68-statlog vehicle si... &   0.37/  0.07 &   0.37/  0.07 &   0.43/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.36}}/  0.09 &   0.41/  0.07 &   0.38/\textcolor{black}{\textbf{  0.06}} &   0.42/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.44}}/  0.07 &   0.40/  0.08 & \textcolor{blue}{\textbf{  0.44}}/  0.07 &   0.41/  0.08 \\
-69-steel plates fault... &   0.48/  0.14 &   0.53/\textcolor{black}{\textbf{  0.12}} &   0.65/\textcolor{black}{\textbf{  0.12}} &   0.51/  0.14 &   0.58/\textcolor{black}{\textbf{  0.12}} &   0.47/  0.16 &   0.49/  0.15 & \textcolor{black}{\textbf{  0.66}}/  0.14 &   0.57/\textcolor{black}{\textbf{  0.12}} & \underline{\textcolor{blue}{\textbf{  0.69}}}/\textcolor{black}{\textbf{  0.12}} &   0.57/\textcolor{darkgreen}{\textbf{  0.10}} \\
+69-steel plates fault... &   0.48/  0.14 &   0.53/  0.12 &   0.65/  0.12 &   0.51/  0.14 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.49/  0.15 &   0.66/  0.14 &   0.57/  0.12 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.12 &   0.57/\textcolor{black}{\textbf{  0.10}} \\
 70-systhetic control &   0.60/  0.07 &   0.60/  0.07 &   0.63/  0.06 &   0.60/  0.07 &   0.63/  0.06 &   0.61/  0.07 & \textcolor{red}{\textbf{  0.38}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.66}}}/\textcolor{black}{\textbf{  0.05}} &   0.62/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.64}}/  0.06 &   0.60/\textcolor{black}{\textbf{  0.05}} \\
 71-teaching assistant... &   0.11/  0.17 &   0.13/  0.14 & \textcolor{blue}{\textbf{  0.15}}/  0.17 &   0.13/  0.17 &   0.13/  0.15 &   0.12/  0.16 &   0.11/  0.18 & \textcolor{blue}{\textbf{  0.15}}/  0.15 & \textcolor{blue}{\textbf{  0.15}}/  0.17 &   0.13/  0.14 &   0.12/\textcolor{black}{\textbf{  0.13}} \\ \hline
 72-thyroid ann &   0.14/\textcolor{black}{\textbf{  0.05}} &   0.15/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.20}}/  0.06 &   0.14/  0.06 &   0.16/  0.06 &   0.13/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.08}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.20}}/  0.08 &   0.15/  0.07 &   0.19/  0.06 &   0.14/  0.07 \\
@@ -89,14 +89,14 @@
 75-thyroid sick &   0.20/\textcolor{black}{\textbf{  0.06}} &   0.19/  0.07 &   0.20/\textcolor{black}{\textbf{  0.06}} &   0.20/\textcolor{black}{\textbf{  0.06}} &   0.21/\textcolor{black}{\textbf{  0.06}} &   0.20/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.26}}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.06}} &   0.23/\textcolor{black}{\textbf{  0.06}} &   0.22/\textcolor{black}{\textbf{  0.06}} \\
 76-thyroid sick euthy... &   0.07/\textcolor{black}{\textbf{  0.09}} &   0.14/  0.11 & \textcolor{blue}{\textbf{  0.23}}/  0.11 &   0.14/  0.11 &   0.15/  0.11 & \textcolor{red}{\textbf{  0.06}}/  0.10 &   0.13/\textcolor{black}{\textbf{  0.09}} & \textcolor{blue}{\textbf{  0.23}}/  0.14 &   0.13/  0.12 & \textcolor{blue}{\textbf{  0.23}}/  0.10 &   0.15/  0.12 \\
 77-tic tac toe &   0.18/  0.10 &   0.17/\textcolor{darkgreen}{\textbf{  0.07}} &   0.18/\textcolor{black}{\textbf{  0.08}} &   0.16/  0.09 &   0.15/  0.10 &   0.16/  0.10 & \textcolor{red}{\textbf{  0.14}}/  0.11 & \textcolor{blue}{\textbf{  0.20}}/  0.09 &   0.15/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.20}}/  0.12 &   0.17/  0.11 \\
-78-turkiye student &   0.10/  0.02 &   0.11/  0.02 &   0.11/  0.02 &   0.11/  0.02 &   0.10/  0.02 &   0.10/  0.02 &   0.09/  0.02 &   0.11/  0.02 & \textcolor{blue}{\textbf{  0.12}}/  0.02 & \textcolor{blue}{\textbf{  0.12}}/  0.02 &   0.11/  0.02 \\ \hline
-79-twonorm &   0.66/\textcolor{black}{\textbf{  0.19}} &   0.64/\textcolor{black}{\textbf{  0.19}} & \textcolor{black}{\textbf{  0.70}}/  0.20 &   0.67/\textcolor{black}{\textbf{  0.19}} &   0.68/  0.21 &   0.67/  0.20 &   0.68/  0.20 & \underline{\textcolor{blue}{\textbf{  0.71}}}/\textcolor{black}{\textbf{  0.19}} &   0.67/\textcolor{black}{\textbf{  0.19}} & \textcolor{black}{\textbf{  0.70}}/  0.21 &   0.67/  0.20 \\
+78-turkiye student &   0.10/  0.02 &   0.11/  0.02 &   0.11/  0.02 &   0.11/  0.02 &   0.10/  0.02 &   0.10/  0.02 & \textcolor{red}{\textbf{  0.09}}/  0.02 &   0.11/  0.02 & \textcolor{blue}{\textbf{  0.12}}/  0.02 & \textcolor{blue}{\textbf{  0.12}}/  0.02 &   0.11/  0.02 \\ \hline
+79-twonorm &   0.66/\textcolor{black}{\textbf{  0.19}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.19}} &   0.70/  0.20 &   0.67/\textcolor{black}{\textbf{  0.19}} &   0.68/  0.21 &   0.67/  0.20 &   0.68/  0.20 & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.19}} &   0.67/\textcolor{black}{\textbf{  0.19}} &   0.70/  0.21 &   0.67/  0.20 \\
 80-user knowledge &   0.38/\textcolor{black}{\textbf{  0.07}} &   0.36/\textcolor{black}{\textbf{  0.07}} &   0.45/  0.12 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.07}} &   0.38/  0.09 &   0.36/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.35}}/\textcolor{darkgreen}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.49}}}/  0.10 &   0.42/  0.08 & \textcolor{black}{\textbf{  0.47}}/  0.10 &   0.39/  0.09 \\
-81-vertebra column 2c &   0.38/  0.19 &   0.38/  0.18 & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.39/  0.17 &   0.44/  0.15 &   0.37/  0.16 & \underline{\textcolor{blue}{\textbf{  0.53}}}/  0.13 &   0.50/  0.16 &   0.41/  0.16 & \textcolor{black}{\textbf{  0.52}}/  0.15 &   0.41/  0.16 \\
+81-vertebra column 2c &   0.38/  0.19 &   0.38/  0.18 & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.39/  0.17 &   0.44/\textcolor{black}{\textbf{  0.15}} & \textcolor{red}{\textbf{  0.37}}/  0.16 & \underline{\textcolor{blue}{\textbf{  0.53}}}/\textcolor{darkgreen}{\textbf{  0.13}} &   0.50/  0.16 &   0.41/  0.16 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.15}} &   0.41/  0.16 \\
 82-vertebra column 3c &   0.57/  0.12 &   0.59/  0.10 &   0.64/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.56}}/  0.14 &   0.59/  0.11 &   0.58/  0.11 & \textcolor{blue}{\textbf{  0.65}}/  0.11 & \textcolor{blue}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.08}} &   0.59/  0.09 &   0.64/  0.09 &   0.58/  0.09 \\
-83-volcanoes a3 &   0.26/  0.09 &   0.26/  0.08 &   0.27/  0.09 & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.08 & \textcolor{black}{\textbf{  0.28}}/  0.08 &   0.26/  0.09 &   0.26/  0.08 &   0.27/  0.08 &   0.27/  0.08 &   0.24/  0.09 &   0.26/  0.07 \\
+83-volcanoes a3 &   0.26/  0.09 &   0.26/  0.08 &   0.27/  0.09 & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.08 & \textcolor{black}{\textbf{  0.28}}/  0.08 &   0.26/  0.09 &   0.26/  0.08 &   0.27/  0.08 &   0.27/  0.08 & \textcolor{red}{\textbf{  0.24}}/  0.09 &   0.26/\textcolor{black}{\textbf{  0.07}} \\
 84-volcanoes b2 &   0.21/  0.07 &   0.23/  0.07 & \textcolor{black}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.28}}}/  0.07 &   0.25/  0.07 &   0.18/  0.08 & \textcolor{red}{\textbf{  0.11}}/\textcolor{darkgreen}{\textbf{  0.05}} &   0.24/\textcolor{black}{\textbf{  0.06}} &   0.19/  0.07 &   0.21/\textcolor{black}{\textbf{  0.06}} &   0.21/  0.07 \\
-85-volcanoes d1 &   0.08/  0.04 & \underline{\textcolor{blue}{\textbf{  0.11}}}/  0.06 &   0.02/\textcolor{darkgreen}{\textbf{  0.01}} &   0.05/  0.05 &   0.04/  0.05 & \textcolor{black}{\textbf{  0.10}}/  0.06 &   0.04/\textcolor{black}{\textbf{  0.03}} &   0.05/  0.04 &   0.07/  0.05 &   0.06/  0.05 & \textcolor{black}{\textbf{  0.10}}/  0.06 \\ \hline
+85-volcanoes d1 &   0.08/  0.04 & \underline{\textcolor{blue}{\textbf{  0.11}}}/  0.06 & \textcolor{red}{\textbf{  0.02}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.05/  0.05 &   0.04/  0.05 & \textcolor{black}{\textbf{  0.10}}/  0.06 &   0.04/\textcolor{black}{\textbf{  0.03}} &   0.05/  0.04 &   0.07/  0.05 &   0.06/  0.05 & \textcolor{black}{\textbf{  0.10}}/  0.06 \\ \hline
 86-volcanoes e2 &   0.11/  0.08 &   0.11/  0.09 & \textcolor{red}{\textbf{  0.04}}/\textcolor{darkgreen}{\textbf{  0.04}} &   0.05/\textcolor{black}{\textbf{  0.06}} &   0.08/  0.08 & \textcolor{black}{\textbf{  0.12}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.13}}}/  0.08 &   0.08/  0.07 &   0.11/  0.09 &   0.07/  0.07 & \textcolor{black}{\textbf{  0.12}}/  0.07 \\
 87-voting & \textcolor{red}{\textbf{  0.57}}/  0.12 &   0.58/  0.15 &   0.64/\textcolor{black}{\textbf{  0.11}} &   0.64/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.15 &   0.59/\textcolor{black}{\textbf{  0.11}} &   0.64/  0.13 & \textcolor{blue}{\textbf{  0.67}}/  0.12 &   0.61/\textcolor{darkgreen}{\textbf{  0.10}} &   0.65/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.13 \\
 88-waveform v2 &   0.37/\textcolor{black}{\textbf{  0.06}} &   0.37/\textcolor{black}{\textbf{  0.06}} &   0.39/  0.08 &   0.38/  0.07 &   0.37/  0.07 & \textcolor{red}{\textbf{  0.36}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.43}}}/  0.07 & \textcolor{black}{\textbf{  0.40}}/  0.07 &   0.38/\textcolor{black}{\textbf{  0.06}} &   0.39/  0.07 &   0.38/  0.07 \\
@@ -105,6 +105,6 @@
 91-wilt &   0.00/  0.05 & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.03}}/  0.09 &   0.00/  0.04 &   0.00/  0.04 &   0.00/  0.05 & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.18 &   0.02/  0.06 &   0.00/\textcolor{black}{\textbf{  0.03}} &   0.00/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{ -0.01}}/  0.04 \\
 92-wine &   0.80/  0.09 & \textcolor{red}{\textbf{  0.78}}/  0.10 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.07}} &   0.82/  0.09 &   0.79/  0.08 &   0.80/  0.08 & \textcolor{blue}{\textbf{  0.83}}/  0.08 &   0.81/  0.08 &   0.82/  0.08 &   0.79/\textcolor{black}{\textbf{  0.07}} \\ \hline
 93-wine quality white... &   0.12/\textcolor{black}{\textbf{  0.03}} &   0.11/  0.05 &   0.12/\textcolor{black}{\textbf{  0.03}} &   0.11/  0.04 &   0.11/  0.04 &   0.12/  0.04 & \textcolor{red}{\textbf{  0.08}}/  0.05 &   0.12/  0.05 & \textcolor{blue}{\textbf{  0.13}}/  0.04 & \textcolor{blue}{\textbf{  0.13}}/  0.05 & \textcolor{blue}{\textbf{  0.13}}/  0.04 \\
-94-yeast 4class &   0.33/  0.06 &   0.34/  0.06 &   0.34/  0.06 &   0.34/  0.06 &   0.34/  0.07 &   0.32/  0.05 &   0.28/  0.06 & \underline{\textcolor{blue}{\textbf{  0.36}}}/  0.07 &   0.34/  0.07 & \textcolor{black}{\textbf{  0.35}}/  0.07 &   0.33/  0.06 \\\end{tabular}}\label{stratsALCKappa2aIELMRedux}
+94-yeast 4class &   0.33/  0.06 &   0.34/  0.06 &   0.34/  0.06 &   0.34/  0.06 &   0.34/  0.07 &   0.32/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.28}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.36}}}/  0.07 &   0.34/  0.07 & \textcolor{black}{\textbf{  0.35}}/  0.07 &   0.33/  0.06 \\\end{tabular}}\label{stratsALCKappa2aIELMRedux}
 \end{center}
 \end{table}
