--- a/stratsALCKappaNBRedux.tex
+++ b/stratsALCKappaNBRedux.tex
@@ -3,13 +3,13 @@
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.30/  0.09 &   0.34/  0.03 &   0.31/  0.05 &   0.34/  0.04 & \textcolor{red}{\textbf{  0.27}}/  0.08 &   0.34/  0.04 & \textcolor{black}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.08 &   0.35/\textcolor{black}{\textbf{  0.02}} \\
-2-arcene &   0.33/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.32/  0.11 &   0.31/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.10 \\
+2-arcene &   0.33/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} &   0.35/  0.10 &   0.32/  0.11 & \textcolor{red}{\textbf{  0.31}}/  0.10 &   0.33/  0.10 &   0.35/  0.10 &   0.35/  0.10 &   0.33/  0.10 &   0.35/\textcolor{black}{\textbf{  0.09}} & \textcolor{red}{\textbf{  0.31}}/  0.10 \\
 3-artificial charact... &   0.17/\textcolor{black}{\textbf{  0.02}} &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.18/  0.03 &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.18/  0.03 & \textcolor{red}{\textbf{  0.08}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.10/\textcolor{darkgreen}{\textbf{  0.04}} &   0.10/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.01}}/  0.06 &   0.05/  0.06 &   0.10/\textcolor{black}{\textbf{  0.05}} &   0.04/  0.06 &   0.03/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.01}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.12}}}/  0.06 & \textcolor{red}{\textbf{  0.01}}/  0.06 & \textcolor{black}{\textbf{  0.11}}/  0.06 \\
 5-autoUniv au7 300 d... & \textcolor{blue}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.02}} &   0.09/  0.03 &   0.08/  0.04 &   0.09/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} &   0.09/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} &   0.09/  0.03 &   0.09/\textcolor{black}{\textbf{  0.02}} &   0.09/  0.03 & \textcolor{blue}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.02}} \\
 6-autoUniv au7 700 &   0.10/\textcolor{black}{\textbf{  0.04}} &   0.10/\textcolor{black}{\textbf{  0.04}} &   0.08/\textcolor{black}{\textbf{  0.04}} &   0.10/  0.06 &   0.10/\textcolor{black}{\textbf{  0.04}} &   0.10/\textcolor{black}{\textbf{  0.04}} &   0.09/  0.05 &   0.10/  0.05 & \underline{\textcolor{blue}{\textbf{  0.12}}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.03}}/  0.06 &   0.07/\textcolor{black}{\textbf{  0.04}} \\
-7-balance scale &   0.61/  0.05 &   0.60/  0.05 &   0.62/  0.10 &   0.52/  0.09 &   0.61/  0.05 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.04 &   0.59/  0.09 &   0.63/  0.09 & \textcolor{black}{\textbf{  0.64}}/  0.04 &   0.62/  0.09 & \textcolor{black}{\textbf{  0.64}}/  0.05 \\ \hline
-8-banana &   0.13/  0.09 &   0.09/  0.08 & \textcolor{black}{\textbf{  0.18}}/  0.14 &   0.02/  0.11 &   0.17/  0.13 & \textcolor{black}{\textbf{  0.18}}/  0.11 &   0.15/  0.08 & \underline{\textcolor{blue}{\textbf{  0.19}}}/  0.14 &   0.13/\textcolor{black}{\textbf{  0.06}} &   0.15/  0.15 &   0.14/\textcolor{black}{\textbf{  0.06}} \\
+7-balance scale &   0.61/  0.05 &   0.60/  0.05 &   0.62/  0.10 & \textcolor{red}{\textbf{  0.52}}/  0.09 &   0.61/  0.05 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} &   0.59/  0.09 &   0.63/  0.09 &   0.64/\textcolor{black}{\textbf{  0.04}} &   0.62/  0.09 &   0.64/  0.05 \\ \hline
+8-banana &   0.13/  0.09 &   0.09/  0.08 &   0.18/  0.14 & \textcolor{red}{\textbf{  0.02}}/  0.11 &   0.17/  0.13 &   0.18/  0.11 &   0.15/  0.08 &   0.19/  0.14 &   0.13/\textcolor{black}{\textbf{  0.06}} &   0.15/  0.15 &   0.14/\textcolor{black}{\textbf{  0.06}} \\
 9-banknote authentic... &   0.51/  0.17 &   0.56/  0.18 &   0.67/  0.20 & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.58/\textcolor{darkgreen}{\textbf{  0.12}} &   0.68/  0.19 &   0.59/  0.18 &   0.70/  0.22 &   0.48/  0.19 &   0.68/  0.17 &   0.61/  0.17 \\
 10-bupa &   0.11/\textcolor{black}{\textbf{  0.07}} &   0.10/  0.08 &   0.12/  0.08 &   0.09/  0.08 & \textcolor{black}{\textbf{  0.14}}/  0.09 &   0.12/\textcolor{black}{\textbf{  0.07}} &   0.11/  0.10 &   0.11/  0.09 &   0.10/\textcolor{black}{\textbf{  0.07}} &   0.12/  0.09 &   0.12/  0.09 \\
 11-car evaluation &   0.46/  0.06 &   0.46/  0.05 & \underline{\textcolor{blue}{\textbf{  0.59}}}/  0.04 &   0.50/  0.05 &   0.47/  0.09 &   0.55/  0.05 &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.52/  0.05 &   0.46/  0.05 & \textcolor{red}{\textbf{  0.23}}/  0.11 &   0.37/  0.05 \\
@@ -20,7 +20,7 @@
 16-connect. vowel red... &   0.48/  0.05 &   0.46/  0.04 &   0.50/\textcolor{black}{\textbf{  0.03}} &   0.50/  0.05 & \textcolor{red}{\textbf{  0.45}}/  0.05 &   0.51/  0.05 &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 &   0.52/  0.04 &   0.51/  0.06 & \textcolor{black}{\textbf{  0.53}}/  0.04 \\
 17-connect. vowel... &   0.40/  0.03 &   0.41/  0.04 &   0.43/  0.03 &   0.44/  0.03 &   0.41/  0.03 &   0.45/  0.03 & \textcolor{red}{\textbf{  0.34}}/  0.03 &   0.45/  0.03 & \textcolor{black}{\textbf{  0.47}}/  0.03 &   0.46/  0.03 &   0.46/  0.03 \\
 18-dbworld subjects &   0.40/  0.12 &   0.40/  0.13 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  0.57}}/  0.11 &   0.51/  0.13 &   0.50/  0.15 &   0.55/\textcolor{black}{\textbf{  0.10}} &   0.56/  0.11 & \textcolor{red}{\textbf{  0.37}}/  0.14 &   0.50/  0.14 &   0.45/  0.17 \\
-19-first order theore... &   0.06/\textcolor{black}{\textbf{  0.02}} &   0.07/  0.03 &   0.09/  0.03 &   0.05/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.10}}/  0.04 &   0.09/  0.03 & \textcolor{blue}{\textbf{  0.10}}/  0.03 &   0.07/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.10}}/  0.03 &   0.09/\textcolor{black}{\textbf{  0.02}} \\
+19-first order theore... &   0.06/\textcolor{black}{\textbf{  0.02}} &   0.07/  0.03 &   0.09/  0.03 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.10}}/  0.03 & \textcolor{blue}{\textbf{  0.10}}/  0.04 &   0.09/  0.03 & \textcolor{blue}{\textbf{  0.10}}/  0.03 &   0.07/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.10}}/  0.03 &   0.09/\textcolor{black}{\textbf{  0.02}} \\
 20-flare &   0.25/  0.08 &   0.22/  0.07 &   0.28/  0.07 & \textcolor{red}{\textbf{  0.19}}/  0.09 &   0.25/  0.07 &   0.28/  0.08 &   0.30/  0.07 &   0.28/  0.08 &   0.24/  0.07 & \textcolor{blue}{\textbf{  0.33}}/  0.06 &   0.32/\textcolor{black}{\textbf{  0.05}} \\
 21-glass &   0.30/\textcolor{black}{\textbf{  0.05}} &   0.30/  0.06 & \textcolor{blue}{\textbf{  0.36}}/  0.06 & \textcolor{red}{\textbf{  0.29}}/  0.06 &   0.34/  0.06 &   0.33/\textcolor{black}{\textbf{  0.05}} &   0.35/  0.07 & \textcolor{blue}{\textbf{  0.36}}/  0.06 &   0.31/\textcolor{black}{\textbf{  0.05}} &   0.33/  0.07 &   0.31/  0.07 \\ \hline
 22-habermans survival &   0.15/  0.09 &   0.15/\textcolor{black}{\textbf{  0.08}} &   0.13/  0.09 & \textcolor{red}{\textbf{  0.12}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.15/  0.10 &   0.13/  0.09 &   0.13/  0.09 & \textcolor{red}{\textbf{  0.12}}/  0.09 &   0.14/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.12}}/  0.09 &   0.15/\textcolor{black}{\textbf{  0.08}} \\
@@ -33,26 +33,26 @@
 29-ionosphere &   0.64/  0.11 &   0.63/  0.11 &   0.67/  0.10 &   0.66/  0.10 & \textcolor{red}{\textbf{  0.58}}/  0.13 &   0.70/  0.10 &   0.67/\textcolor{black}{\textbf{  0.09}} &   0.69/  0.10 &   0.64/  0.11 &   0.68/\textcolor{black}{\textbf{  0.09}} &   0.67/  0.11 \\
 30-iris &   0.81/  0.10 &   0.81/  0.10 &   0.80/  0.10 &   0.76/  0.12 &   0.76/  0.09 &   0.82/  0.09 &   0.80/  0.10 &   0.81/  0.10 & \textcolor{blue}{\textbf{  0.83}}/  0.09 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.08}} \\
 31-kr vs kp &   0.53/  0.05 &   0.55/  0.06 & \textcolor{blue}{\textbf{  0.76}}/  0.03 &   0.45/  0.06 &   0.57/  0.06 &   0.74/  0.03 &   0.67/  0.04 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.61/  0.03 & \textcolor{red}{\textbf{  0.16}}/  0.09 &   0.23/  0.07 \\
-32-leaf &   0.49/  0.04 &   0.50/  0.04 &   0.44/  0.04 &   0.48/  0.04 &   0.49/  0.04 &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.44/\textcolor{black}{\textbf{  0.03}} &   0.44/  0.04 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.44/  0.04 & \textcolor{blue}{\textbf{  0.54}}/  0.04 \\\end{tabular}}\label{stratsALCKappa0aNBRedux}
+32-leaf &   0.49/  0.04 &   0.50/  0.04 & \textcolor{red}{\textbf{  0.44}}/  0.04 &   0.48/  0.04 &   0.49/  0.04 &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.44}}/  0.04 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.44}}/  0.04 & \textcolor{blue}{\textbf{  0.54}}/  0.04 \\\end{tabular}}\label{stratsALCKappa0aNBRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 33-leukemia haslinger &   0.67/  0.12 &   0.68/  0.12 &   0.65/  0.12 &   0.65/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.62}}/  0.13 &   0.68/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.11}} &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 \\
-34-mammographic mass & \textcolor{blue}{\textbf{  0.55}}/  0.07 &   0.53/  0.07 &   0.37/  0.17 &   0.48/  0.09 &   0.50/  0.07 &   0.46/  0.11 &   0.37/  0.13 &   0.28/  0.21 & \textcolor{blue}{\textbf{  0.55}}/  0.05 &   0.32/  0.18 &   0.54/  0.07 \\
+34-mammographic mass & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.07}} &   0.53/\textcolor{black}{\textbf{  0.07}} &   0.37/  0.17 &   0.48/  0.09 &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.46/  0.11 &   0.37/  0.13 & \textcolor{red}{\textbf{  0.28}}/  0.21 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{darkgreen}{\textbf{  0.05}} &   0.32/  0.18 &   0.54/\textcolor{black}{\textbf{  0.07}} \\
 35-mfeat fourier & \textcolor{red}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.52}}/  0.03 &   0.55/  0.04 &   0.55/  0.04 &   0.54/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.04 &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.55/  0.04 &   0.59/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.67/\textcolor{darkgreen}{\textbf{  0.07}} &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.67/  0.10 &   0.69/  0.09 &   0.69/\textcolor{black}{\textbf{  0.08}} & \underline{\textcolor{blue}{\textbf{  0.71}}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.44}}/  0.12 &   0.53/  0.09 \\
-37-molecular splice j... &   0.65/  0.07 &   0.67/  0.04 & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.73}}/  0.03 &   0.63/  0.06 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.64/  0.03 & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.33/  0.13 &   0.50/  0.09 \\
-38-monks1 & \textcolor{black}{\textbf{  0.37}}/  0.10 &   0.35/\textcolor{black}{\textbf{  0.09}} &   0.18/  0.12 &   0.23/\textcolor{black}{\textbf{  0.09}} &   0.36/\textcolor{black}{\textbf{  0.09}} & \underline{\textcolor{blue}{\textbf{  0.40}}}/  0.12 &   0.19/  0.11 &   0.18/  0.12 &   0.35/  0.11 &   0.16/  0.14 &   0.32/  0.13 \\
+37-molecular splice j... &   0.65/  0.07 &   0.67/  0.04 & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.73}}/  0.03 &   0.63/  0.06 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.64/  0.03 & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 & \textcolor{red}{\textbf{  0.33}}/  0.13 &   0.50/  0.09 \\
+38-monks1 &   0.37/  0.10 &   0.35/\textcolor{black}{\textbf{  0.09}} &   0.18/  0.12 &   0.23/\textcolor{black}{\textbf{  0.09}} &   0.36/\textcolor{black}{\textbf{  0.09}} &   0.40/  0.12 &   0.19/  0.11 &   0.18/  0.12 &   0.35/  0.11 & \textcolor{red}{\textbf{  0.16}}/  0.14 &   0.32/  0.13 \\
 39-monks2 & \textcolor{red}{\textbf{ -0.04}}/  0.05 & \textcolor{red}{\textbf{ -0.04}}/\textcolor{black}{\textbf{  0.04}} &   0.01/  0.10 &  -0.01/  0.05 &  -0.03/\textcolor{black}{\textbf{  0.04}} &   0.01/  0.05 & \underline{\textcolor{blue}{\textbf{  0.05}}}/  0.11 &   0.01/  0.07 & \textcolor{red}{\textbf{ -0.04}}/\textcolor{black}{\textbf{  0.04}} &  -0.01/  0.08 &  -0.03/  0.05 \\ \hline
 40-monks3 &   0.61/\textcolor{black}{\textbf{  0.14}} &   0.64/\textcolor{black}{\textbf{  0.14}} &   0.35/  0.26 &   0.33/  0.21 &   0.61/\textcolor{black}{\textbf{  0.14}} &   0.67/  0.25 &   0.31/  0.26 &   0.35/  0.26 &   0.70/\textcolor{darkgreen}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.26}}/  0.21 &   0.55/  0.23 \\
 41-movement libras & \textcolor{red}{\textbf{  0.46}}/  0.05 & \textcolor{red}{\textbf{  0.46}}/  0.05 & \textcolor{red}{\textbf{  0.46}}/  0.05 &   0.47/  0.05 & \textcolor{red}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.04}} &   0.48/  0.06 & \textcolor{red}{\textbf{  0.46}}/  0.05 &   0.47/  0.06 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.04}} &   0.47/  0.06 &   0.48/\textcolor{black}{\textbf{  0.04}} \\
 42-movement libras 10 & \textcolor{red}{\textbf{  0.50}}/  0.05 &   0.52/  0.04 &   0.52/  0.04 &   0.52/  0.04 &   0.53/  0.04 &   0.51/  0.05 &   0.52/  0.04 &   0.52/  0.04 & \textcolor{blue}{\textbf{  0.56}}/  0.04 &   0.52/  0.05 & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} \\
-43-mushroom &   0.83/  0.03 &   0.86/  0.03 & \textcolor{black}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.01}} &   0.94/  0.02 &   0.82/  0.06 & \textcolor{black}{\textbf{  0.95}}/  0.02 & \textcolor{black}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.96}}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.19 &   0.68/  0.05 \\
-44-ozone eighthr &   0.13/  0.04 & \textcolor{black}{\textbf{  0.16}}/  0.05 &   0.15/  0.07 & \textcolor{black}{\textbf{  0.16}}/  0.08 & \textcolor{black}{\textbf{  0.16}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.07 &   0.15/  0.07 & \textcolor{black}{\textbf{  0.16}}/  0.08 & \textcolor{black}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.03}} &   0.14/  0.08 &   0.15/\textcolor{black}{\textbf{  0.03}} \\
-45-ozone onehr &   0.09/  0.08 &   0.10/  0.07 & \textcolor{black}{\textbf{  0.11}}/  0.10 &   0.10/  0.08 &   0.10/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.12}}}/  0.09 & \textcolor{black}{\textbf{  0.11}}/  0.11 & \textcolor{black}{\textbf{  0.11}}/  0.11 & \textcolor{black}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.06}} &   0.10/  0.09 &   0.09/\textcolor{darkgreen}{\textbf{  0.05}} \\
-46-page blocks &   0.45/  0.10 &   0.48/  0.09 &   0.47/  0.11 &   0.37/  0.11 &   0.48/  0.09 &   0.46/  0.11 &   0.46/  0.09 &   0.47/  0.12 & \underline{\textcolor{blue}{\textbf{  0.50}}}/  0.08 & \textcolor{black}{\textbf{  0.49}}/  0.11 &   0.48/  0.08 \\ \hline
+43-mushroom &   0.83/  0.03 &   0.86/  0.03 & \textcolor{black}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.01}} &   0.94/  0.02 &   0.82/  0.06 & \textcolor{black}{\textbf{  0.95}}/  0.02 & \textcolor{black}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.96}}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.59}}/  0.19 &   0.68/  0.05 \\
+44-ozone eighthr & \textcolor{red}{\textbf{  0.13}}/  0.04 &   0.16/  0.05 &   0.15/  0.07 &   0.16/  0.08 &   0.16/  0.05 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.07 &   0.15/  0.07 &   0.16/  0.08 &   0.16/\textcolor{black}{\textbf{  0.03}} &   0.14/  0.08 &   0.15/\textcolor{black}{\textbf{  0.03}} \\
+45-ozone onehr & \textcolor{red}{\textbf{  0.09}}/  0.08 &   0.10/  0.07 & \textcolor{black}{\textbf{  0.11}}/  0.10 &   0.10/  0.08 &   0.10/  0.06 & \underline{\textcolor{blue}{\textbf{  0.12}}}/  0.09 & \textcolor{black}{\textbf{  0.11}}/  0.11 & \textcolor{black}{\textbf{  0.11}}/  0.11 & \textcolor{black}{\textbf{  0.11}}/  0.06 &   0.10/  0.09 & \textcolor{red}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.05}} \\
+46-page blocks &   0.45/  0.10 &   0.48/  0.09 &   0.47/  0.11 & \textcolor{red}{\textbf{  0.37}}/  0.11 &   0.48/  0.09 &   0.46/  0.11 &   0.46/  0.09 &   0.47/  0.12 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.08}} &   0.49/  0.11 &   0.48/\textcolor{black}{\textbf{  0.08}} \\ \hline
 47-parkinsons &   0.38/  0.11 &   0.38/  0.12 & \textcolor{red}{\textbf{  0.36}}/  0.13 & \textcolor{red}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.38/  0.12 &   0.38/  0.12 &   0.39/  0.13 &   0.38/  0.12 & \textcolor{black}{\textbf{  0.40}}/  0.11 &   0.38/  0.13 &   0.37/  0.11 \\
 48-phoneme &   0.38/  0.05 & \textcolor{black}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.04}} &   0.33/  0.13 & \textcolor{red}{\textbf{  0.31}}/  0.12 &   0.37/  0.07 &   0.38/  0.07 &   0.34/  0.12 &   0.32/  0.13 &   0.40/  0.05 & \textcolor{red}{\textbf{  0.31}}/  0.15 & \textcolor{black}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.04}} \\
 49-pima indians diabe... &   0.33/  0.11 &   0.34/  0.09 &   0.29/  0.11 &   0.26/  0.10 &   0.32/  0.08 &   0.33/  0.10 & \textcolor{red}{\textbf{  0.25}}/  0.09 &   0.27/  0.12 &   0.34/  0.10 &   0.29/  0.11 &   0.34/\textcolor{black}{\textbf{  0.07}} \\
@@ -62,11 +62,11 @@
 53-robot failure lp1 &   0.79/  0.09 &   0.80/  0.07 &   0.79/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.09 & \textcolor{red}{\textbf{  0.71}}/  0.10 & \textcolor{black}{\textbf{  0.81}}/  0.08 &   0.78/  0.08 &   0.80/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.81}}/  0.08 &   0.80/  0.08 & \textcolor{black}{\textbf{  0.81}}/  0.07 \\ \hline
 54-robot failure lp4 &   0.65/\textcolor{black}{\textbf{  0.08}} &   0.65/  0.09 &   0.63/\textcolor{black}{\textbf{  0.08}} &   0.64/  0.11 & \textcolor{red}{\textbf{  0.62}}/  0.09 &   0.64/\textcolor{black}{\textbf{  0.08}} &   0.63/\textcolor{black}{\textbf{  0.08}} &   0.63/  0.09 & \textcolor{blue}{\textbf{  0.67}}/  0.10 &   0.66/  0.10 &   0.64/  0.09 \\
 55-robot failure lp5 & \textcolor{red}{\textbf{  0.42}}/  0.08 & \textcolor{red}{\textbf{  0.42}}/  0.07 &   0.43/  0.07 &   0.44/\textcolor{black}{\textbf{  0.06}} &   0.43/  0.07 &   0.45/  0.07 &   0.44/  0.07 &   0.43/  0.07 &   0.43/  0.07 & \textcolor{blue}{\textbf{  0.46}}/\textcolor{black}{\textbf{  0.06}} &   0.43/  0.07 \\
-56-robot nav sensor r... &   0.63/  0.11 &   0.63/  0.13 &   0.67/  0.11 &   0.62/  0.12 &   0.65/  0.09 &   0.66/  0.12 &   0.44/  0.21 &   0.62/  0.14 &   0.67/  0.09 &   0.63/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.07}} \\
+56-robot nav sensor r... &   0.63/  0.11 &   0.63/  0.13 &   0.67/  0.11 &   0.62/  0.12 &   0.65/  0.09 &   0.66/  0.12 & \textcolor{red}{\textbf{  0.44}}/  0.21 &   0.62/  0.14 &   0.67/  0.09 &   0.63/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.07}} \\
 57-saheart &   0.29/  0.09 &   0.28/  0.09 &   0.25/  0.08 &   0.27/\textcolor{black}{\textbf{  0.07}} &   0.27/  0.08 &   0.29/  0.09 &   0.23/  0.08 &   0.23/  0.08 & \textcolor{blue}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.22}}/  0.15 & \textcolor{blue}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.07}} \\
 58-seeds &   0.81/  0.06 &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.82/  0.06 &   0.82/  0.06 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.82/  0.06 &   0.82/  0.06 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/  0.07 \\
-59-semeion &   0.59/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.08 & \textcolor{black}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} &   0.58/  0.04 &   0.59/  0.07 &   0.60/  0.06 &   0.62/  0.05 & \underline{\textcolor{blue}{\textbf{  0.67}}}/  0.04 &   0.60/  0.04 & \textcolor{black}{\textbf{  0.63}}/  0.04 \\
-60-spambase &   0.57/  0.04 &   0.58/  0.05 &   0.53/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.54/  0.06 &   0.57/  0.05 &   0.52/  0.05 &   0.53/  0.04 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.53/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.04 \\ \hline
+59-semeion &   0.59/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.08 &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.58}}/  0.04 &   0.59/  0.07 &   0.60/  0.06 &   0.62/  0.05 & \textcolor{blue}{\textbf{  0.67}}/  0.04 &   0.60/  0.04 &   0.63/  0.04 \\
+60-spambase &   0.57/  0.04 &   0.58/  0.05 &   0.53/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.54/  0.06 &   0.57/  0.05 & \textcolor{red}{\textbf{  0.52}}/  0.05 &   0.53/  0.04 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.53/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.04 \\ \hline
 61-spect heart &   0.34/  0.12 &   0.32/  0.13 & \textcolor{black}{\textbf{  0.36}}/  0.10 &   0.29/  0.15 &   0.33/  0.12 &   0.34/  0.11 &   0.34/\textcolor{darkgreen}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.36}}/  0.10 &   0.32/  0.13 & \textcolor{red}{\textbf{  0.17}}/  0.14 &   0.29/  0.10 \\
 62-spectf heart &   0.31/\textcolor{black}{\textbf{  0.07}} &   0.34/  0.08 &   0.35/  0.09 &   0.33/\textcolor{black}{\textbf{  0.07}} &   0.32/  0.08 &   0.33/\textcolor{black}{\textbf{  0.07}} &   0.35/  0.09 &   0.35/  0.09 &   0.33/\textcolor{black}{\textbf{  0.07}} &   0.32/  0.10 &   0.31/\textcolor{black}{\textbf{  0.07}} \\
 63-statlog australian... &   0.50/  0.06 &   0.49/  0.06 &   0.45/  0.10 &   0.43/  0.08 &   0.47/  0.06 & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.05}} &   0.45/  0.09 &   0.46/  0.13 &   0.51/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.24}}/  0.22 &   0.43/  0.09 \\
@@ -78,9 +78,9 @@
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.61/  0.08 &   0.61/  0.09 &   0.44/  0.11 &   0.47/  0.15 &   0.57/  0.09 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.41}}/  0.13 &   0.44/  0.13 & \textcolor{black}{\textbf{  0.63}}/  0.09 &   0.43/  0.18 &   0.59/\textcolor{black}{\textbf{  0.07}} \\
 66-statlog image segm... &   0.69/  0.03 &   0.68/  0.04 &   0.62/  0.07 &   0.68/  0.03 &   0.62/  0.09 & \textcolor{black}{\textbf{  0.73}}/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.08 &   0.71/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.06 &   0.68/  0.03 \\
-67-statlog landsat sa... &   0.73/  0.03 &   0.74/  0.02 &   0.73/  0.05 &   0.73/  0.02 &   0.70/  0.04 & \underline{\textcolor{blue}{\textbf{  0.76}}}/  0.02 &   0.64/  0.08 & \textcolor{black}{\textbf{  0.75}}/  0.02 & \textcolor{black}{\textbf{  0.75}}/  0.03 &   0.73/  0.03 &   0.74/  0.02 \\
+67-statlog landsat sa... &   0.73/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.73/  0.05 &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.04 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.64}}/  0.08 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.03 &   0.73/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.28/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.37}}/  0.06 & \textcolor{red}{\textbf{  0.24}}/  0.05 &   0.31/  0.05 &   0.34/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.39}}}/\textcolor{black}{\textbf{  0.04}} &   0.34/  0.05 &   0.27/  0.05 &   0.36/  0.05 &   0.28/\textcolor{black}{\textbf{  0.04}} \\
-69-steel plates fault... & \textcolor{black}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.09}} &   0.67/\textcolor{black}{\textbf{  0.09}} &   0.39/  0.14 &   0.54/  0.13 &   0.56/  0.15 &   0.66/  0.10 &   0.44/  0.12 &   0.49/  0.18 & \underline{\textcolor{blue}{\textbf{  0.71}}}/\textcolor{black}{\textbf{  0.09}} &   0.44/  0.17 & \textcolor{black}{\textbf{  0.69}}/\textcolor{darkgreen}{\textbf{  0.08}} \\
+69-steel plates fault... & \textcolor{black}{\textbf{  0.69}}/  0.09 &   0.67/  0.09 & \textcolor{red}{\textbf{  0.39}}/  0.14 &   0.54/  0.13 &   0.56/  0.15 &   0.66/  0.10 &   0.44/  0.12 &   0.49/  0.18 & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.09 &   0.44/  0.17 & \textcolor{black}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.08}} \\
 70-systhetic control & \textcolor{red}{\textbf{  0.84}}/  0.03 &   0.86/  0.03 &   0.85/  0.07 &   0.88/  0.04 &   0.85/  0.04 &   0.90/\textcolor{black}{\textbf{  0.02}} &   0.86/  0.06 &   0.85/  0.07 &   0.88/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.84}}/  0.07 &   0.86/\textcolor{black}{\textbf{  0.02}} \\
 71-teaching assistant... &   0.18/\textcolor{darkgreen}{\textbf{  0.07}} &   0.19/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.21}}/  0.09 &   0.18/  0.09 &   0.20/\textcolor{black}{\textbf{  0.08}} &   0.20/\textcolor{black}{\textbf{  0.08}} &   0.17/  0.10 & \textcolor{black}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.08}} &   0.20/  0.09 & \textcolor{red}{\textbf{  0.14}}/  0.12 &   0.19/  0.11 \\ \hline
 72-thyroid ann &   0.06/  0.04 &   0.06/  0.03 &   0.05/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.04}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.07}}/  0.05 &   0.05/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.23}}}/  0.13 & \textcolor{red}{\textbf{  0.04}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.05/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.04}}/\textcolor{black}{\textbf{  0.02}} &   0.05/\textcolor{black}{\textbf{  0.02}} \\
@@ -89,14 +89,14 @@
 75-thyroid sick &   0.29/  0.03 &   0.31/  0.03 &   0.23/  0.07 &   0.25/  0.06 &   0.28/  0.05 &   0.29/  0.05 & \textcolor{red}{\textbf{  0.09}}/  0.05 &   0.27/  0.07 & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.02}} &   0.16/  0.07 &   0.12/  0.04 \\
 76-thyroid sick euthy... &   0.14/  0.11 &   0.13/  0.09 &   0.18/  0.16 &   0.11/  0.10 & \underline{\textcolor{blue}{\textbf{  0.24}}}/  0.15 &   0.16/  0.15 & \textcolor{black}{\textbf{  0.23}}/  0.19 &   0.16/  0.14 &   0.16/  0.10 & \textcolor{red}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.03}} &   0.11/\textcolor{black}{\textbf{  0.03}} \\
 77-tic tac toe &   0.24/  0.06 &   0.23/\textcolor{black}{\textbf{  0.05}} &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.18/  0.07 &   0.22/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.05}} &   0.23/  0.07 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.05}} &   0.25/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.07}}/  0.10 &   0.25/\textcolor{black}{\textbf{  0.05}} \\
-78-turkiye student &   0.12/  0.02 &   0.12/  0.02 &   0.12/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.12/  0.01 &   0.07/  0.01 & \textcolor{blue}{\textbf{  0.14}}/  0.02 & \textcolor{blue}{\textbf{  0.14}}/  0.01 &   0.12/  0.02 &   0.13/  0.02 \\ \hline
-79-twonorm &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.85/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.04 &   0.86/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 &   0.86/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.88}}}/\textcolor{black}{\textbf{  0.02}} &   0.86/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.02}} \\
+78-turkiye student &   0.12/  0.02 &   0.12/  0.02 &   0.12/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.12/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.14}}/  0.02 & \textcolor{blue}{\textbf{  0.14}}/\textcolor{black}{\textbf{  0.01}} &   0.12/  0.02 &   0.13/  0.02 \\ \hline
+79-twonorm &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.79}}/  0.04 &   0.86/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 &   0.86/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.02}} &   0.86/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} \\
 80-user knowledge &   0.61/\textcolor{black}{\textbf{  0.06}} &   0.61/\textcolor{black}{\textbf{  0.06}} &   0.61/  0.10 & \textcolor{red}{\textbf{  0.57}}/  0.08 &   0.64/\textcolor{black}{\textbf{  0.06}} &   0.64/  0.07 &   0.59/  0.07 &   0.61/  0.10 &   0.64/\textcolor{black}{\textbf{  0.06}} &   0.67/  0.08 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.06}} \\
-81-vertebra column 2c &   0.50/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.50/  0.08 &   0.49/  0.06 &   0.51/  0.07 & \textcolor{blue}{\textbf{  0.52}}/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.51/  0.07 &   0.48/  0.12 &   0.46/  0.09 \\
+81-vertebra column 2c &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.52}}/  0.09 &   0.50/  0.08 &   0.49/\textcolor{darkgreen}{\textbf{  0.06}} &   0.51/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.52}}/  0.08 & \textcolor{black}{\textbf{  0.52}}/  0.09 &   0.51/\textcolor{black}{\textbf{  0.07}} &   0.48/  0.12 & \textcolor{red}{\textbf{  0.46}}/  0.09 \\
 82-vertebra column 3c &   0.62/  0.07 &   0.63/  0.08 & \textcolor{blue}{\textbf{  0.66}}/  0.07 &   0.65/  0.07 &   0.62/\textcolor{black}{\textbf{  0.06}} &   0.64/  0.07 & \textcolor{blue}{\textbf{  0.66}}/  0.07 & \textcolor{blue}{\textbf{  0.66}}/  0.07 &   0.65/  0.07 &   0.65/  0.07 & \textcolor{red}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.06}} \\
-83-volcanoes a3 &   0.28/  0.06 &   0.33/  0.05 &   0.30/  0.05 &   0.32/  0.06 &   0.33/  0.05 & \textcolor{blue}{\textbf{  0.34}}/  0.06 &   0.28/  0.05 &   0.30/  0.05 & \textcolor{blue}{\textbf{  0.34}}/  0.05 &   0.28/  0.06 &   0.33/  0.04 \\
+83-volcanoes a3 & \textcolor{red}{\textbf{  0.28}}/  0.06 &   0.33/  0.05 &   0.30/  0.05 &   0.32/  0.06 &   0.33/  0.05 & \textcolor{blue}{\textbf{  0.34}}/  0.06 & \textcolor{red}{\textbf{  0.28}}/  0.05 &   0.30/  0.05 & \textcolor{blue}{\textbf{  0.34}}/  0.05 & \textcolor{red}{\textbf{  0.28}}/  0.06 &   0.33/\textcolor{black}{\textbf{  0.04}} \\
 84-volcanoes b2 & \textcolor{red}{\textbf{  0.19}}/  0.08 &   0.25/  0.07 & \textcolor{black}{\textbf{  0.29}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.30}}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.29}}/  0.06 &   0.27/\textcolor{black}{\textbf{  0.05}} &   0.23/  0.07 &   0.25/  0.08 &   0.23/\textcolor{black}{\textbf{  0.05}} &   0.25/\textcolor{black}{\textbf{  0.05}} &   0.22/  0.06 \\
-85-volcanoes d1 &   0.08/  0.04 & \textcolor{blue}{\textbf{  0.13}}/  0.05 &   0.04/  0.03 &   0.05/  0.04 &   0.05/\textcolor{black}{\textbf{  0.02}} &   0.05/  0.03 &   0.04/  0.03 &   0.03/\textcolor{black}{\textbf{  0.02}} &   0.12/  0.05 &   0.04/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.13}}/  0.05 \\ \hline
+85-volcanoes d1 &   0.08/  0.04 & \textcolor{blue}{\textbf{  0.13}}/  0.05 &   0.04/  0.03 &   0.05/  0.04 &   0.05/\textcolor{black}{\textbf{  0.02}} &   0.05/  0.03 &   0.04/  0.03 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.02}} &   0.12/  0.05 &   0.04/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.13}}/  0.05 \\ \hline
 86-volcanoes e2 &   0.15/  0.07 &   0.15/  0.09 & \textcolor{red}{\textbf{  0.04}}/\textcolor{black}{\textbf{  0.02}} &   0.07/  0.04 &   0.09/  0.05 &   0.11/  0.06 &   0.05/\textcolor{black}{\textbf{  0.02}} &   0.06/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.08 &   0.06/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.06 \\
 87-voting &   0.71/  0.08 &   0.72/  0.07 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.69/  0.08 &   0.74/  0.08 &   0.76/  0.07 & \underline{\textcolor{blue}{\textbf{  0.82}}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.06}} &   0.72/  0.08 & \textcolor{red}{\textbf{  0.54}}/  0.18 &   0.72/  0.07 \\
 88-waveform v2 &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.61/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.61/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} \\
@@ -105,6 +105,6 @@
 91-wilt &   0.20/  0.13 &   0.20/  0.10 &   0.21/  0.18 & \textcolor{red}{\textbf{  0.18}}/  0.16 &   0.24/  0.14 & \underline{\textcolor{blue}{\textbf{  0.28}}}/  0.17 &   0.26/  0.20 &   0.21/  0.17 & \textcolor{red}{\textbf{  0.18}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.19/  0.16 &   0.21/\textcolor{black}{\textbf{  0.08}} \\
 92-wine &   0.90/  0.04 &   0.89/  0.04 &   0.90/  0.04 &   0.84/  0.06 & \textcolor{red}{\textbf{  0.83}}/  0.05 & \textcolor{blue}{\textbf{  0.92}}/  0.04 &   0.90/  0.04 &   0.91/  0.04 & \textcolor{blue}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.03}} &   0.91/  0.04 &   0.90/  0.04 \\ \hline
 93-wine quality white... &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.15/  0.03 &   0.15/  0.04 &   0.13/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.16}}/  0.03 & \textcolor{red}{\textbf{  0.09}}/  0.04 &   0.15/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.16}}/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.02}} \\
-94-yeast 4class &   0.28/  0.05 &   0.29/  0.06 &   0.26/  0.05 &   0.27/  0.05 & \textcolor{blue}{\textbf{  0.30}}/  0.06 & \textcolor{blue}{\textbf{  0.30}}/  0.05 &   0.29/  0.06 &   0.25/  0.05 &   0.27/  0.04 &   0.25/  0.06 &   0.23/  0.04 \\\end{tabular}}\label{stratsALCKappa2aNBRedux}
+94-yeast 4class &   0.28/  0.05 &   0.29/  0.06 &   0.26/  0.05 &   0.27/  0.05 & \textcolor{blue}{\textbf{  0.30}}/  0.06 & \textcolor{blue}{\textbf{  0.30}}/  0.05 &   0.29/  0.06 &   0.25/  0.05 &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.25/  0.06 & \textcolor{red}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.04}} \\\end{tabular}}\label{stratsALCKappa2aNBRedux}
 \end{center}
 \end{table}
